--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,134 @@
 
+　　船舱，建造得精巧而华丽，绝没有一寸地方浪费，也绝没有一件东西让人瞧不顺眼的。 <br>
+　　走下楼梯，是间精致的起居室，灯光慢慢照下来，这黝黑的船舱里，渐渐有了光亮。 <br>
+　　走在前面的楚留香，突然停住了脚，就好像突然被一根钉子钉在地板上，再也动不得了。 <br>
+　　这舱中竟有个人，女人！ <br>
+　　只见她背向着门，坐在楚留香平日最喜欢的椅子上，从后面望过去，只瞧见高挽的云鬓和一只手。 <br>
+　　那是只绝美的手。 <br>
+　　此刻，这手上拿着只杯子，杯子里倒的是楚留香平日喜欢喝的酒——她倒是一点也不客气。 <br>
+　　楚留香、苏蓉蓉、李红袖、宋甜儿，四个人都怔在地板上，张大了嘴，都说不出话来。 <br>
+　　这女子是何时进来的，他们竟全不知道。 <br>
+　　也许，她是在楚留香已下海时进来，但能瞒得过苏蓉蓉、李红袖、宋甜儿的耳目，这本事可也不小。 <br>
+　　只听一个优美但冷漠的语声缓缓道：“进来的，可是‘盗帅’楚留香？” <br>
+　　楚留香笑道：“不错，在下可是走错门了？” <br>
+　　那女人冷冷道：“你没有走错，这是你的地方。” <br>
+　　楚留香笑道：“既然是我的地方，姑娘你却又怎会坐在这里？” <br>
+　　那女子道：“**因为我高兴。**” <br>
+　　楚留香大笑道：“这理由不错，实在不错。” <br>
+　　那女子道：“此外，我还听说楚留香对女孩子是从来不会拒绝的。” <br>
+　　她突然转过椅子，面对着楚留香。 <br>
+　　灯光，就照着了她的脸。 <br>
+　　若说世上有一种女子的脸能使男人停止呼吸，那么就是这女子的脸了；若世上有一种女子的眼波能使男人的心跳停止，也就是这女子的眼波。现在，这双眼波正凝注着楚留香。 <br>
+　　她悠悠道：“现在，这理由够好了么？” <br>
+　　楚留香讷讷道：“不错，这理由突然变得够好了，太好了。” <br>
+　　他眼光终于自这女子脸上移开，才发现她穿的是雪白的轻纱长袍，才发现她腰间束着银色的丝绦。 <br>
+　　那女子缓缓道：“现在，你只怕已知道我是从什么地方来的了。” <br>
+　　楚留香叹道：“我宁可不知道。” <br>
+　　那女子道：“为什么？” <br>
+　　楚留香道：“世上若有我不愿打交道的女孩子，那就是‘神水宫’门下。” <br>
+　　那女子突然站起来，转了个身，自架上取下了银壶，又满满倒了杯酒，楚留香心痛地叹了口气，道：“我很想知道，你到这里来，除了喝酒外，还有什么别的事？” <br>
+　　他一面说，一面拉过那张椅子，赶紧坐下来。 <br>
+　　那女子侧着头，盯着他的脸，一字字道：“傲慢、无礼、冷酷，但却也有一两点能令小姑娘着迷的地方……你果然和传说中的样子分毫不差。” <br>
+　　楚留香道：“多谢……却不知道江湖传说中有没有提到我另一件事？” <br>
+　　那女子道：“什么事？” <br>
+　　楚留香道：“若有陌生的女子跑进我的船舱，坐我的椅子，喝我的酒，我常常会将她抛下海里去的，尤其是这女子自以为很美，其实却不太美的时候。” <br>
+　　他舒服地伸长了腿，准备欣赏这女子生气的模样。 <br>
+　　这女子果然气白了脸，手也在抖。 <br>
+　　李红袖赶紧走过去，自她手里轻轻取过了那金杯，嫣然笑道：“姑娘若要摔杯子，我去换个铁的来。” <br>
+　　那女子脸色由青转白，由白转红，突然又展颜而笑，道：“很好，你们都很有趣，但现在说笑的时候已过去了。” <br>
+　　楚留香道：“你准备哭了么？” <br>
+　　那女子冷冷道：“你若不还我东西，只怕连哭都哭不出来。” <br>
+　　楚留香道：“还你？我难道借了你什么？” <br>
+　　那女子道：“你没有借，自然没有借，天下的人都知道，楚留香从不会向任何人借任何东西的。” <br>
+　　她冷笑一声，道：“你是偷。” <br>
+　　楚留香皱眉道：“偷？我偷了你什么？” <br>
+　　那女子道：“天一神水！” <br>
+　　楚留香眼睛突然圆了，失声道：“你说什么？” <br>
+　　那女子一字字道：“天——一——神——水！” <br>
+　　楚留香动容道：“你是说，你们宫里的天一神水被人偷去了？” <br>
+　　那女子道：“我千里迢迢，来到这里，总不会是骗你玩的吧？” <br>
+　　楚留香眼睛里射出愉快的光芒，喃喃道：“妙极妙极，一切事情都变得更有趣了，却不知你们的‘天一神水’被人偷了多少？” <br>
+　　那女子冷冷道：“不多，才不过几滴，但却已足够使三十几个武林一流高手不明不白地一命呜呼，假如用法正确的话，三十七个。” <br>
+　　苏蓉蓉轻轻抽了口气，道：“你认为那是他偷去的。” <br>
+　　那女子冷笑道：“除了‘盗帅’楚留香，还有谁能自‘神水宫’中偷走一草一木？” <br>
+　　楚留香微笑道：“多承夸奖，如此说来，我若说未做此事，你是绝对不肯相信的了。” <br>
+　　那女子道：“你能使我相信么？” <br>
+　　楚留香道：“也许……也许能的。” <br>
+　　他突然从椅上跳了起来，拉住了那女子的手，道：“至少，你得先让我带你去瞧样东西，我可以保证这样东西很有趣……非常非常有趣。” <br>
+　　那冷漠而骄傲的少女，也不知怎地，居然就这样被拉了出去。 <br>
+　　苏蓉蓉叹道：“他若想拉一个女孩子的手，只怕是没有人能拒绝的。” <br>
+　　宋甜儿眨了眨眼睛，道：“神水宫门下若都系男人就好了。” <br>
+　　李红袖笑道：“女人也没有关系，不过最好丑一点。” <br>
+　　宋甜儿格格笑道：“如能丑得像母夜叉，则最为感激。” <br>
+
+×　　　　　　×　　　　　　×
+
+　　帆布被掀了起来。 <br>
+　　那尸身，在星光下看起来更是狰狞可怖。 <br>
+　　楚留香道：“你先看她，你总该认识她吧？” <br>
+　　那女子目光凝注着被人砍去一肩的少女尸身，就像是瞧着块石头似的，面上木然全无表情，冷冷道：“这不是神水宫门下弟子。” <br>
+　　楚留香终于吃了一惊，失声道：“不是？” <br>
+　　那女子道：“我一生中从未见过这个人。” <br>
+　　楚留香摸了摸鼻子，像是刚被人迎面打了一拳，苦笑道：“我本以为神水是被你们自己宫里的人偷出来的，我本来以为就是她，但是现在——” <br>
+　　那女子冷冷道：“现在你还觉得有趣么？” <br>
+　　楚留香喃喃道：“这女子既非神水宫门下，为何要作这样打扮，这自然不是她自己的意思，而是‘他’将她扮成这模样，来引起别人的错觉。” <br>
+　　那女子道：“什么错觉？” <br>
+　　楚留香道：“‘他’要别人都以为札木合就是被这女子害死的，那么，现在她既也死在札木合手中，一切事便都可结束，‘他’显然不想别人再对这件事继续追究，这可怜的女子就做了‘他’的代罪羔羊。” <br>
+　　那女子悠悠道：“你这样，想必一定知道‘他’是谁了？” <br>
+　　楚留香叹了一口气，道：“但愿我能知道。” <br>
+
+　　那女子嘴角泛起一丝恶意的微笑，但楚留香却不让她说话，他手拉着她的手，眼睛瞧着她的眼睛，道：“冷姑娘，你若想将这件事谜底揭穿，就必须信任我。” <br>
+　　他话声听来那么温柔，那么诚恳，而他的眼睛更比世上所有的言语更具说服人的力量。 <br>
+　　那女子终于赧然一笑，道：“我不姓冷。” <br>
+　　楚留香眼睛闪着光，道：“那么，我该叫你什么？” <br>
+　　那女子脸色突又沉下来，冷冷道：“就叫我冷姑娘吧！” <br>
+　　楚留香轻轻叹息了一声，道：“第一，我们先要研究的是，那‘天一神水’既不能换取财富，也不能助长武功，他为什么要偷呢？” <br>
+　　那女子冷笑道：“这该问你才是。” <br>
+　　楚留香道：“那‘天一神水’唯一的用处，就是害人，而且不知不觉地将人害死，‘他’费了许多力气，来偷这‘天一神水’，显然只有一个原因。” <br>
+　　那女子道：“这原因已足够了。” <br>
+　　楚留香道：“由此点我们便可以断定‘他’所要害的人，必然不是普通毒药所能害死的，也不是‘他’自己的力量所能杀死的！” <br>
+　　那女子点头道：“不错，否则‘他’又何必冒险盗水。” <br>
+　　楚留香道：“但他若是真的能自‘神水宫’将水盗去，世上还有几个他杀不死的人？能自‘神水宫’中盗水，那要何等身手！” <br>
+　　他微微一笑，接着道：“由此可见，‘他’盗取神水，定有人在暗中相助。” <br>
+　　那女子道：“你的意思是在说谁？” <br>
+　　楚留香目光凝注着她，道：“神水失窃以后，你们宫中可有人失踪？” <br>
+　　那女子冷笑道：“原来你的意思是说本宫弟子有人在暗中助‘他’盗水，所以盗走了神水之后，自己也畏罪潜逃了，是么？” <br>
+　　楚留香道：“这难道不可能？” <br>
+　　那女子道：“自然可能，只可惜数十年来，本宫的弟子却从无一人逃走，更绝不会有人失踪。” <br>
+　　楚留香皱了皱眉，想了想，又道：“神水失窃以后，你们宫里难道什么事都没有发生么？譬如说，是不是有人自杀而死……” <br>
+　　那女子神情立刻变了，道：“你怎会知道？” <br>
+　　楚留香眼睛亮了起来，大声道：“的确有人自杀而死，是么？她为什么自杀的？” <br>
+　　那女子厉声道：“本宫中事，也是你随便问得的么？” <br>
+　　楚留香捧起她的手，缓缓道：“冷姑娘，这件事你一定得告诉我，只因这件事就是关键，你……你一定得相信我。” <br>
+　　那女子将手抽了出来，背转身，默然许久，一字一字道：“她是个可爱的女孩子，既美丽，又多情，年纪也最轻，她……她既已死了，我不能再说她……” <br>
+　　楚留香目光闪动，突然道：“她是不是因为有了身孕，自觉无颜见人？” <br>
+　　那女子没有回答，但一只垂下来的手却紧紧捏住了衣带，显见得她心里充满了悲愤与激动。 <br>
+　　楚留香大声道：“这就对了，她一定先已被‘他’骗去了身子，然后，又在‘他’胁迫之下，盗出了神水，但‘他’却没有遵守诺言将她带走，所以她只有死这一条路！” <br>
+　　那女子身子忽然颤抖起来，大声道：“住口！” <br>
+　　楚留香叹道：“这本是千古以来，多情的少女们都难免遭遇到的悲惨命运，你与其为她伤心，倒不如设法找到‘他’，为她报仇。” <br>
+　　那女子霍然转回身子，颤声道：“要怎样才能找出‘他’来？” <br>
+　　楚留香沉吟道：“她临死之前，可曾说了什么话？” <br>
+　　那女子眼睛满是泪光，黯然道：“她只说……她对不起肚里的孩子。” <br>
+　　楚留香叹道：“在这种情况下，她为何不肯说出‘他’是谁，仍然深怕别人伤害到‘他’……唉！‘他’究竟有什么魔力，竟能令少女为‘他’如此痴情？” <br>
+　　那女子惨然道：“她的确从来没有提起过‘他’。她根本从未提起过任何男人，我们实在做梦也想不到这种事会发生在她身上。” <br>
+　　楚留香道：“平时，她有没有相识的男子？” <br>
+　　那女子断然道：“她几乎从来没有和男人讲过话。” <br>
+　　楚留香道：“怪事，今天怎会有许多怪事……五个素不相关的人，竟会在同一时间里死在一个地方！‘神水宫’中的神水，竟会神秘的被窃！一个端庄淑静，从不与男人说话的少女，竟会有了身孕，而这三件事看起来也绝不会有什么关系的，竟偏偏又纠缠到一起……” <br>
+　　他抬起头，喃喃道：“这种事，谁能解释？” <br>
+　　那女子道：“你！” <br>
+　　楚留香苦笑道：“我……” <br>
+　　那女子盯着他，厉声道：“为了你自己，你必须将这谜底揭开。” <br>
+　　楚留香道：“但线索呢？我几乎完全没有线索。” <br>
+　　那女子道：“线索必定有的，你自己找出来。” <br>
+　　她又转过身，背对着楚留香，一字一字道：“我给你一个月的时间，你若找不出来，神水宫就要来找你！” <br>
+　　楚留香道：“你为何要转过身去？难道你面对着我时，就说不出这么不讲理的话？” <br>
+　　那女子再不理他，从船舷旁，缓缓走到船尾。 <br>
+　　船尾的阴影里，有只精巧的小艇。 <br>
+　　她飘身掠下去，小艇竟立即滑开。 <br>
+　　楚留香倚在船舷上，静静地瞧着她。 <br>
+　　星光灿烂，轻舟仿佛荡漾在星海里，风舞的轻纱，更像是仙子的羽衣，她忽然回过头，嫣然一笑，道：“我的名字叫宫南燕。” <br>
+
+------
 　　现在，楚留香终于已将局势完全控制住了！已反客为主！ <br>
 　　但蝙蝠公子究竟是谁呢？ <br>
 　　他的人在哪里？ <br>
