--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,14 @@
 2025年挑战：记录一些想法和分享。
 
-最新 5.21：
+最新 5.22：
 
+苏蓉蓉这个人物的气场好弱啊！我幻想中的苏蓉蓉应该是拿着一柄刻着“小楼一夜听春雨”的圆月弯刀，刀出鞘时划过一弯闪亮的银光，速度比傅红雪拔刀还要快。同时她还有着静如处子动如脱兔的轻功，像一片浮云飘荡在空中，忽快忽慢，轻轻一闪就避开了那如雷霆般的重拳一击，愤怒的时候还会双指向天空引雷电积蓄力量进行闪电攻击。
+
+总的来说，苏蓉蓉这女的骨架还是挺好的，只要把气场加强一点就行了，下图中这女的气场就很不错，最近比较喜欢这款凶神恶煞女。
+
+![凶](../pic/sub/qingqing.JPG) <br>
+
+------
 李红袖一把抱住了她，格格笑道：“我真是个又会多心，又会吃醋的小坏蛋，蓉姐为什么还要对我这么好？”苏蓉蓉纤细的身子，竟被她抱了起来。
 
 哈哈哈~~我就是喜欢会吃醋的女孩子
