--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,72 @@
 
+　　身经百战的胡铁花怎么会变成如此模样？<br>
+　　楚留香骤然觉得他所面对的不是一个人、一柄剑，而是一团混沌的、奇特的、妖异的杀气！<br>
+　　这团杀气是一个奇人和一柄魔剑混合凝结成的，人和剑已凝为一体，几乎已无坚不摧，无懈可击。<br>
+　　这人已成了剑之鬼，剑已成了人的魂魄。<br>
+　　楚留香暗中叹了口气，他知道以自己现在的情况来面对这剑中之魔，非但不智，而且不幸。<br>
+　　一个人在饥饿、疲倦时，肉体不支，精神更脆弱，内贼已将生，外贼自然更容易乘虚而入。<br>
+　　和水母那一战已几乎将他的真力损耗殆尽，此刻他实在已无力击破这团杀气。<br>
+　　黑袍客死灰的眼睛里，忽然射出了一股青光，正如火焰已烧成白热，楚留香纵然是钢铁，也难免要被融化。<br>
+　　他只望那青衣尼能骤然奋起，那么两人前后夹击，也许还有胜望，怎奈青衣尼，也已完全崩溃了，伏在那尸身上，仿佛连站都无法站起。<br>
+　　突然间，剑尖挑起，划了个圆弧。<br>
+　　黑袍客冷冷道：“想不到你们比我想像中的还要不济，看来我举手间已可将你置之于死地。”<br>
+　　楚留香凝注着他掌中的剑尖，正准备飞身而起，但黑袍客长剑突然化为一片光幕断绝了他所有去路。<br>
+　　剑尖破风，尖锐如哨。<br>
+　　楚留香就算能破了这一剑，怎奈此刻已是力不从心。<br>
+　　就在这时，却听一人大喝道：“住手！”<br>
+　　喝声响起，呼啸的剑风，突然寂绝，那妖蛇般的长剑也骤然顿住，剑尖遥指着楚留香的眉心。<br>
+　　黑袍客冷冷道：“我只不过是想看看谁要我住手而已，并没有别的意思，你应该知道我这一剑随时都可取你的性命。”<br>
+　　楚留香并没有听到他的话，只是望着他身后，只听他身后一人道：“你看不到我的，因为你只要一动，我就要你的命。”<br>
+　　这声音虽然娇脆柔美，但却也带着种凌厉的杀气，令人不得不相信她的话，也不敢不相信。<br>
+　　黑袍客瞪着楚留香，只见楚留香脸色既是惊奇，又是欢喜，微笑道：“你最好相信她的话，我可以保证她绝不是说笑的。”<br>
+　　黑袍客冷笑道：“我若不信呢？”<br>
+　　楚留香悠然道：“你若看到她手里拿着的是什么，就不会不信了。”<br>
+　　黑袍客目光顿时已变成死灰，一字字道：“无论她手里拿着的是什么，我还是随时都可要你的命。”<br>
+　　楚留香道：“你为何不先看看她手里拿着的是什么？”<br>
+　　要知黑袍客此刻全身劲气全都凝聚在剑上，只要一回头，剑气便松懈，楚留香就有了生机。<br>
+　　谁知黑袍客竟也看透了他的心意，冷冷道：“你想要我回头，只怕还不大容易。”<br>
+　　楚留香道：“你不敢回头？”<br>
+　　黑袍客道：“此刻你全身都已在我剑气笼罩之下，已如瓮中之鳖，网中之鱼，我若不回头，你就永无生机，纵然她掌中二十七枚暴雨梨花钉全都打在我身上，我这一剑还是可以置你于死地。”<br>
+　　楚留香道：“原来你已猜出她手里拿着的是什么了。”<br>
+　　黑袍客冷笑道：“她手里若无暴雨梨花钉，又怎敢如此大言要挟于我？”<br>
+　　楚留香忽然笑了笑道：“但她手上若是空的，只不过是吓吓你的，你这当上得岂非冤枉？”<br>
+　　黑袍客脸色变了变，道：“她手上是否空的，我不必回头看也可知道。”<br>
+　　楚留香道：“哦？你背后也有眼睛？”<br>
+　　黑袍客厉声道：“我这一剑刺出，就可试出她手上是否空的了。”<br>
+　　楚留香笑道：“她手上若是真有暴雨梨花钉，你这一剑刺出，岂非就糟了？二十七枚暴雨梨花钉自你背后击出，你能躲得开吗？”<br>
+　　黑袍客冷冷道：“能和楚香帅同归于尽，倒也并不是什么太蚀本的生意。”<br>
+　　楚留香笑了笑，道：“很好，你出手吧！只怕你这剑未必能杀得死我，那时你可就蚀了大本了。”<br>
+　　黑袍客脸色又变了变，道：“我若不想出手呢？”<br>
+　　楚留香笑道：“你不出手，她只怕也不会出手的，你若想走，只管请便，并没有人拉住你。”<br>
+　　黑袍客目光闪动，道：“我怎知她……”<br>
+　　楚留香截口道：“只要你走，我保证她决不向你出手。”<br>
+　　黑袍客道：“你用什么保证？我凭什么要信任你？”<br>
+　　楚留香叹了口气，道：“你若不信任我，就只有出手，你若不想出手，就只有信任我，这其间难道还有什么选择的余地？”<br>
+　　黑袍客目光灼灼，瞪了他半晌，忽然大笑道：“我若连楚香帅都不信任，这世上哪里还有我可以信任的人……好，今日就此别过，来日后会有期。”<br>
+　　楚留香道：“下次你我再见时，你最好想法子在背后装上对眼睛。”<br>
+　　黑袍客道：“只望阁下也好生保重身体，养精蓄锐，在这三个月里，切莫有什么病痛，否则就太令我失望了。”<br>
+　　他嘴里说着话，人已大步走了出来，竟始终没有回头去看一眼，只见他黑衫随风飘动，眨眼间就走得瞧不见了。
+
+×　　　　　　×　　　　　　×
+
+　　他刚走，本来站在他身后的苏蓉蓉立刻就倒了下去，她脸上已看不到一丝血色，冷汗早已湿透重衣。<br>
+　　她的手是空的，哪有什么暴雨梨花钉。<br>
+　　楚留香赶过去扶住了她，柔声道：“你来得正好，实在太好了。”<br>
+　　苏蓉蓉嘴唇还在发抖，连话都说不出来。<br>
+　　楚留香笑道：“其实你用不着害怕的。”<br>
+　　苏蓉蓉勉强笑道：“我别的都不怕，就怕他回头。”<br>
+　　楚留香道：“但只要你来了，手上是否有暴雨梨花钉都完全一样。”<br>
+　　苏蓉蓉道：“为什么？”<br>
+　　楚留香笑道：“他方才并不是在吹牛，就算你手上有暴雨梨花钉，只要他敢出手，还是可以杀我，我那时的确已在他剑气笼罩之下，但我也算准他绝不敢出手，也不敢回头的，因为这种人一定将自己的性命看得比什么都重，绝不敢以自己的性命作赌注。”<br>
+　　苏蓉蓉道：“可是，他为什么不敢回头呢？”<br>
+　　楚留香笑道：“他不敢回头，就是怕发现自己上当，他这种人若发现自己上了别人的当，只怕就要气得发疯。”<br>
+　　苏蓉蓉道：“他先回头看看再动手也不迟呀！”<br>
+　　楚留香道：“他只要一回头，就无法动手了。”苏蓉蓉道：“为什么？”<br>
+　　楚留香道：“你手上若有暴雨梨花钉，他一回头，你就可乘机制他于死地。”<br>
+　　苏蓉蓉道：“可是我……”<br>
+　　楚留香道：“你手上若是空的，他一回头，就会发现自己上了大当，再想将剑气凝聚，就难如登天了。”
+
+--------
 　　船舱，建造得精巧而华丽，绝没有一寸地方浪费，也绝没有一件东西让人瞧不顺眼的。 <br>
 　　走下楼梯，是间精致的起居室，灯光慢慢照下来，这黝黑的船舱里，渐渐有了光亮。 <br>
 　　走在前面的楚留香，突然停住了脚，就好像突然被一根钉子钉在地板上，再也动不得了。 <br>
