--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,11 @@
+重庆一大学生掉入化粪池身亡，如何评价此事？ - 豁达的浪客的回答 <br>
+https://www.zhihu.com/question/1908221959151542889/answer/1908224103573325037
+
+豁达的浪客：
+喜欢有续航的人生
+对学生来说，这是最绝望的死法，生理和心理的双重打击，学校负不可推卸的责任！ 六米多深的化粪池+腐朽木板盖着+绿毯掩盖，知道的这是化粪池，不知道的还以为是学校特地为学生设的陷阱！ 这简直是天衣无缝的陷阱，尤其是对大学生而言，社会想到化粪池被这样掩盖，还不用井盖！ 这学校到底有没有把学生的生命安全放在心上，就这样草草掩盖！化粪池…阅读全文​
+
+------
 【阴谋论】原随云：檯面上的BOSS反抗幕后的终极BOSS(标题不能重复?)<br>
 https://book.douban.com/review/5699180/
 
