--- a/text/挑战.md
+++ b/text/挑战.md
@@ -74,7 +74,7 @@ https://www.bilibili.com/video/BV18t411A7Se/?p=7
 
 上面是解说，可以看出这几步棋的心态非常微妙。小邪肯定是不想炸的，明着炸相当于告诉对手自己无炸了，这个子仅仅是吃了团长，万一炸的只是旅长呢？广俊是想让小邪炸的，但是他看小邪不想炸以为小邪是想用这个炸弹去炸司令，所以就没去逼这个军长。但是我个人认为小邪是希望对家去逼迫这个军长的，让这个军长主动打兑，从而自己这边保留一个暗炸，另外主动炸炸的不一定是军长也可能是旅长师长，但是他这个子之前不摸炸被像司令的子抓时主动碰上来那是军长的可能性就很大，这里有一个很玄的地方，他这个子无论是旅长、师长还是军长被抓时都只能碰炸的，但是被抓一下后，就会增大这个子是军长的概率。
 
-还有一个比较值得注意的地方是，小邪炸弹上抬一步表面上看起来是闲着，实际上暗暗地在挤压绿色军长的移动空间。
+还有一个比较值得注意的地方是，小邪炸弹向上顶一步表面上看起来是大子套着炸弹的闲着，实际上暗暗地在挤压绿色军长的移动空间。
 
 ------
 测试了下，刚更新时有延迟，下的还是上次的。
