--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.22：
 
+男频中那些粗制滥造的yy小说其实并不yy，套路很庸俗，给人的体验很低俗。真正的yy小说是基于现实而又超越现实的美好状态，剧情是根据辩证法构建出来的，虽然现实中没有，但你的心灵体验告诉你这很合理。
+
+------
 苏蓉蓉这个人物的气场好弱啊！我幻想中的苏蓉蓉应该是拿着一柄刻着“小楼一夜听春雨”的圆月弯刀，刀出鞘时划过一弯闪亮的银光，速度比傅红雪拔刀还要快。同时她还有着静如处子动如脱兔的轻功，像一片浮云飘荡在空中，忽快忽慢，轻轻一闪就避开了那如雷霆般的重拳一击，愤怒的时候还会双指向天空引雷电积蓄力量进行闪电攻击。
 
 总的来说，苏蓉蓉这女的骨架还是挺好的，只要把气场加强一点就行了，下图中这女的气场就很不错，最近比较喜欢这款凶神恶煞女。
