--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,11 @@
+为什么丘赛获奖的学校几乎没有任何数学弱校的学生，是专业性过强的原因吗？ - 人生若梦梦的回答 <br>
+https://www.zhihu.com/question/582572984/answer/1907648890800416466
+
+人生若梦梦：
+丘赛本身意义不大，见多识广大赛，见过就会做没见过就不会，和cmo那种考思维的比赛性质不一样。丘赛和博资考是一个类型，两个经常互相借题。除了分析可以原创，代数和几何这两个经常就是原题，来回出。哈佛博资考出完，pku博资考再用，一道题能用在四五场考试里面，能用十几年。因为本身能做的题就不多，大部分还都默写题。 可能最近一两年…阅读全文​
+
+我认为真正有创造力的做题方法是根据你的心灵体验把题目解答分析出来，而不是通过记住了大量相关的题目套路把答案拟合出来。当然前者需要大量苦思冥想的时间，在中国这个快节奏社会是没人来做这个的，除非你是有钱人或者是不怕死的，但是有钱人又不会去做这么枯燥无聊又低效的事情，把时间都用来做低级享受了，所以就只剩下不怕死的人才会有勇气有耐心去搞深度分析。
+
 重庆一大学生掉入化粪池身亡，如何评价此事？ - 豁达的浪客的回答 <br>
 https://www.zhihu.com/question/1908221959151542889/answer/1908224103573325037
 
