--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.22：
 
+先别去研究ai做数学题了，即使做到了imo满分也没什么特别意义，只不过是搞个大新闻轰动一下而已。先去把ai对数学的对错判断做好了再说，让一个ai做数学题，另外一个ai检验题目做的有没有什么问题，人类工程师再去分析是ai做题有问题还是ai检验有问题，把调试的主要精力放在ai检验上面。
+
+------
 男频中那些粗制滥造的yy小说其实并不yy，套路很庸俗，给人的体验很低俗。真正的yy小说是基于现实而又超越现实的美好状态，人物和剧情是根据辩证法构建出来的，虽然现实中没有，但你的心灵体验告诉你这很合理。但是这种高级体验是有门槛的，需要读者的审美品味经过长期的辩证法训练。
 
 ------
