--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,9 @@
+为什么机器验证的形式化证明没有被数学界广泛采用？ <br>
+https://www.zhihu.com/question/66184910
+
+目前人工智能形式化证明数学定理遇到了哪些困难？有哪些最新进展？ <br>
+https://www.zhihu.com/question/13632717302
+
 为什么丘赛获奖的学校几乎没有任何数学弱校的学生，是专业性过强的原因吗？ - 人生若梦梦的回答 <br>
 https://www.zhihu.com/question/582572984/answer/1907648890800416466
 
