--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,19 @@
 
 最新 5.22：
 
+刚刚看到两只比蟑螂小很多的虫子爬过，速度没有蟑螂那么快，没有直接踩死（如果是蟑螂一定要踩死），用纸巾抓住扔到窗外了。
+
+------
+据我所知，任何一本有价值的军事书，任何一个比较聪明的军事家，而且无论古今中外，无论战略战术，没有不反对消极防御的。只有最愚蠢的人，或者最狂妄的人，才捧了消极防御当法宝。
+
+要强调个人利益服从集体利益，局部利益服从整体利益，眼前利益服从长远利益。要讲兼顾国家、集体和个人，把国家利益、集体利益放在第一位，不能把个人利益放在第一位。
+
+一般来说，一个人为了个人利益而活是要动脑的，而为集体利益似乎不用动脑，可以很愚蠢，反正只要把自己有的东西都无脑交给集体就完事了，什么也不用管。所以除了一般情况也有特殊的情况，当你以考虑最多最机智的方法为集体谋取利益时，有时候会显得你很自私。
+
+-------
+感觉分为视觉、听觉、味觉、触觉处在神经网络的不同区域，味觉又分为甜、咸、酸也对应某些子区域，每个味道都有程度之分，多少神经元被激活了。生命就是拥有维持某种状态的感觉和意识，比如生病了后的痛苦。
+
+------
 先别去研究ai做数学题了，即使做到了imo满分也没什么特别意义，只不过是搞个大新闻轰动一下而已。先去把ai对数学的对错判断做好了再说，让一个ai做数学题，另外一个ai检验题目做的有没有什么问题，人类工程师再去分析是ai做题有问题还是ai检验有问题，把调试的主要精力放在ai检验上面。
 
 ------
