--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,7 @@
 
 最新 5.22：
 
-刚刚看到两只比蟑螂小很多的虫子爬过，速度没有蟑螂那么快，没有直接踩死（如果是蟑螂一定要踩死），用纸巾抓住扔到窗外了。
+刚刚看到两只比蟑螂小很多的虫子爬过，一只还爬到我床上来了，速度没有蟑螂那么快，没有直接踩死（如果是蟑螂一定要踩死），用纸巾抓住扔到窗外了。
 
 ------
 据我所知，任何一本有价值的军事书，任何一个比较聪明的军事家，而且无论古今中外，无论战略战术，没有不反对消极防御的。只有最愚蠢的人，或者最狂妄的人，才捧了消极防御当法宝。
