--- a/text/挑战.md
+++ b/text/挑战.md
@@ -9,7 +9,7 @@
 
 要强调个人利益服从集体利益，局部利益服从整体利益，眼前利益服从长远利益。要讲兼顾国家、集体和个人，把国家利益、集体利益放在第一位，不能把个人利益放在第一位。
 
-一般来说，一个人为了个人利益而活是要动脑的，而为集体利益似乎不用动脑，可以很愚蠢，反正只要把自己有的东西都无脑交给集体就完事了，什么也不用管。所以除了一般情况也有特殊的情况，当你以考虑最多最机智的方法为集体谋取利益时，有时候会显得你很自私。
+一般来说，一个人为个人谋取利益时是要动脑的，而为集体利益服务似乎不用动脑，可以很愚蠢，反正只要把自己有的东西都交给集体就完事了，什么也不用管，或者无脑执行命令，什么也不用想。所以除了一般情况也有特殊的情况，当你以考虑最多最机智的方法为集体谋取利益时，有时候会显得你很自私。
 
 -------
 感觉分为视觉、听觉、味觉、触觉处在神经网络的不同区域，味觉又分为甜、咸、酸也对应某些子区域，每个味道都有程度之分，多少神经元被激活了。生命就是拥有维持某种状态的感觉和意识，比如生病了后的痛苦。
