--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.22：
 
+有人在分析我，认为我应该怎么怎么样。很可惜，你们能分析出来的行为在你们看来都是正常的，你们那么优秀，身边一定不缺这样的正常人。而我就是处于你们的认知之外，是你们分析不出来的不正常的人，所以你们直接找你们身边正常的人就行了，分析我没什么意义。
+
+-------
 刚刚看到两只比蟑螂小很多的虫子爬过，一只还爬到我床上来了，速度没有蟑螂那么快，没有直接踩死（如果是蟑螂一定要踩死），用纸巾抓住扔到窗外了。
 
 ------
