--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,11 @@
+《哪吒 2》总票房超 150 亿，位列全球影史票房榜第 5 名，哪吒 2 还能走多远 - DBinary的回答  <br>
+https://www.zhihu.com/question/14972509361/answer/125094419203
+
+DBinary：
+哪吒这部电源再次证明了国内电影行业不是不行，坚持初心的优秀的作品总是能创造奇迹。
+就是近几年一堆奇葩导演编剧烂拍的也烂，又菜又爱玩，把大家都忽悠怕了。
+这种自己不行怪观众怪市场的奇葩导演能在电影市场挣钱，每一个给他贡献票房的观众都有责任。
+
 为什么机器验证的形式化证明没有被数学界广泛采用？ <br>
 https://www.zhihu.com/question/66184910
 
