--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,9 @@
+当下男性所面临的最大问题：被刻意“非人化” - 胧夜的摇篮曲的文章  <br>
+https://zhuanlan.zhihu.com/p/1908834916231288056
+
+胧夜的摇篮曲：
+男性当下最大的困境就是生活在一个被恶鬼包围、强敌环伺的舆论环境中，这根本不是你不结婚或者不恋爱就能躲开的，而是只要你活着，就会一直呼吸那些有毒的空气，感受无数藏在暗中的人对你的精神攻击和恶意歪曲。 对于…阅读全文​
+
 《哪吒 2》总票房超 150 亿，位列全球影史票房榜第 5 名，哪吒 2 还能走多远 - DBinary的回答  <br>
 https://www.zhihu.com/question/14972509361/answer/125094419203
 
