--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,10 @@
 2025年挑战：记录一些想法和分享。
 
-最新 5.22：
+最新 5.23：
 
+本来想加密的，想了半天还是算了。加密只用在最重要的时候，其他时候有些不方便在这里发的话还是发邮件，邮件发不了那就不发了。
+
+-------
 有人在分析我，认为我应该怎么怎么样。很可惜，你们能分析出来的行为在你们看来都是正常的，你们那么优秀，身边一定不缺这样的正常人。而我就是处于你们的认知之外，是你们分析不出来的不正常的人，所以你们直接找你们身边正常的人就行了，分析我没什么意义。
 
 -------
