--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,30 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 5.17：
+最新 5.23：
 
+天空之城<br>
+https://www.gequhai.com/play/3121290
+
+作词：未知  作曲：久石让
+
+传说在那天上 在天际的深处<br>
+有座美丽雷泊地 隐隐的飘浮云中央<br>
+仍未揭露它真相 又未找到它方向<br>
+愿能有日 向天空飞去<br>
+找出那探访路向 <br>
+探访天际的家乡<br>
+云层里是我家乡 <br>
+寻觅快乐温馨的爱巢 心中的理想 <br>
+在天空中有座城 有小野花飘香 <br>
+在天空中有座城 鸟声似歌柔扬<br>
+凝视我望向天上 在心里轻轻唱<br>
+朦胧我像听到了<br>
+家乡的鸟儿 在和唱<br>
+谁愿意伴我一路 尽力找到它方向<br>
+愿望能有日向天空飞去<br>
+找到我理想路向
+
+------
 甄妮 - 春雨弯刀
 
 作词: 邓伟雄
