--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,6 +2,37 @@
 
 最新 5.23：
 
+井上杏美 - 君をのせて
+
+作词:宫崎骏
+作曲:久石让 
+
+远方地平线 闪耀着光芒<br>
+那是因为 有你在后面<br>
+点滴岁月令人如此怀念<br>
+是因为 有你相伴<br>
+来，出发吧<br>
+把面包片、小刀和手提灯<br>
+塞进背包里<br>
+
+还有爸爸 留下的热情<br>
+妈妈眼中的深情<br>
+
+世界不停转动 有你藏在其中<br>
+闪烁的瞳孔 闪烁的灯光<br>
+
+世界不停转动 伴随着你<br>
+伴随着我们 直到重逢之日<br>
+
+还有爸爸 留下的热情<br>
+妈妈眼中的深情<br>
+
+世界不停转动 有你藏在其中<br>
+闪烁的瞳孔 闪烁的灯光<br>
+
+世界不停转动 伴随着你<br>
+伴随着我们 直到重逢之日<br>
+
 天空之城  主题曲（粤语版）（我电脑里是4分12秒版本）<br>
 https://dai.ly/k6NDovTChWAE0jD6q6Q
 
