--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,10 @@
+为什么说周星驰的性格极难相处？ - 麻将女王的回答  <br>
+https://www.zhihu.com/question/57899715/answer/3448879126
+
+麻将女王:
+看他的采访就知道，这个人超级敏感。 当年鲁豫不过就是看他提到有人一看到他的脸就想笑，然后她随即笑了一下，他就煞有介事地问她为什么笑，是不是也觉得他自己很好笑。 他问鲁豫的那表情，像极了一个长辈被小辈冒犯后的即视感。这性格好相处就怪了。…阅读全文​
+
+-------
 当下男性所面临的最大问题：被刻意“非人化” - 胧夜的摇篮曲的文章  <br>
 https://zhuanlan.zhihu.com/p/1908834916231288056
 
