--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.23：
 
+周星驰自己当导演后拍的不好看，严格来说大部分我没看过。不过之前拍的一些喜剧片演得是真的好，国语配音也很好。
+
+-------
 本来想加密的，想了半天还是算了。加密只用在最重要的时候，其他时候有些不方便在这里发的话还是发邮件，邮件发不了那就不发了。
 
 -------
