--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -4,6 +4,10 @@ https://www.zhihu.com/question/57899715/answer/3448879126
 麻将女王:
 看他的采访就知道，这个人超级敏感。 当年鲁豫不过就是看他提到有人一看到他的脸就想笑，然后她随即笑了一下，他就煞有介事地问她为什么笑，是不是也觉得他自己很好笑。 他问鲁豫的那表情，像极了一个长辈被小辈冒犯后的即视感。这性格好相处就怪了。…阅读全文​
 
+笑看风云：他们功成名就了，他们想要尊重，但观众还是觉得他们是小丑(他们自己这么认为)。
+
+这的确是个问题，好像我也不太喜欢当小丑。但这小丑不是我定义的，而是别人定义的，还有一些友善的人把你当小丑也没什么关系吧，只要没有恶意就行，毕竟喜剧就是给大家带来欢乐的。
+
 -------
 当下男性所面临的最大问题：被刻意“非人化” - 胧夜的摇篮曲的文章  <br>
 https://zhuanlan.zhihu.com/p/1908834916231288056
