--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,7 +4,7 @@
 
 你们可以从很多人中找到我的一些特点，但是你们应该没有看到过有谁的深度分析能力像我这么强的吧？我不认为高学历筛选出来的人深度分析能力能强到哪里去，但是他们经过长期的深度思考也是可以训练出来的，就看他们愿不愿意了。
 
-不对，我之所以有深度思考的机会是因为有大量吃苦耐劳的人和高学历人才在维持社会的运转，所以像我这样的人不用太多，全中国最好不超过100个。
+不对，我之所以有深度思考的机会是因为有大量吃苦耐劳的人和高学历人才在维持社会的运转，所以像我这样的人不用太多，全中国有100个差不多就够了。
 
 ------
 周星驰自己当导演后拍的不好看，严格来说大部分我没看过。不过之前拍的一些喜剧片演得是真的好，国语配音也很好，只是现在没什么重温的欲望。
