--- a/text/挑战.md
+++ b/text/挑战.md
@@ -9,7 +9,7 @@
 ------
 周星驰自己当导演后拍的不好看，严格来说大部分我没看过。不过之前拍的一些喜剧片演得是真的好，国语配音也很好，只是现在没什么重温的欲望。
 
-他可以演好自己的角色，但是审美品位和全局把控能力都不行。
+他可以演好自己的角色，但是审美品位和全局把控能力都不行。周星驰的采访表现的确不太好，但是术业有专攻，他擅长的是喜剧表演。如果要看这种访谈节目，我不会去看周星驰，我会去看窦文涛。
 
 -------
 本来想加密的，想了半天还是算了。加密只用在最重要的时候，其他时候有些不方便在这里发的话还是发邮件，邮件发不了那就不发了。
