--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.23：
 
+人类是从猴子中脱离出来的，未来不会有新物种从人类中脱离出来吧？
+
+-------
 你们可以从很多人中找到我的一些特点，但是你们应该没有看到过有谁的深度分析能力像我这么强的吧？我不认为高学历筛选出来的人深度分析能力能强到哪里去，但是他们经过长期的深度思考也是可以训练出来的，就看他们愿不愿意了。
 
 不对，我之所以有深度思考的机会是因为有大量吃苦耐劳的人和高学历人才在维持社会的运转，所以像我这样的人不用太多，全中国有100个差不多就够了。
