--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,10 @@
+
+教授怒斥学生用 AI 写作业，被图灵奖得主反问「为何布置能用 AI 完成的作业」，如何解读这一质疑？ - 胡勃进制空间的回答  <br>
+https://www.zhihu.com/question/1908482208823469211/answer/1909073801028830267
+
+胡勃进制空间：
+你可以用AI写作业，但你得保证交上去的东西是对的。。如果你用AI生成个作业解答然后自己看一遍，那倒也行。如果你用AI生成一堆垃圾然后交上去，那活该被教授怒斥
+
 为什么说周星驰的性格极难相处？ - 麻将女王的回答  <br>
 https://www.zhihu.com/question/57899715/answer/3448879126
 
