--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,24 @@
 2025年挑战：记录一些想法和分享。
 
-最新 5.23：
+最新 5.24：
 
+袁小迪/龙千玉 - 男人情女人心
+
+词曲：张锦华
+
+查埔人的情 甘愿为爱拼一生<br>
+查某人的心 甘愿为情来牺牲<br>
+对你这段情 是愈久愈坚定<br>
+爱你一粒心 也未变形<br>
+
+无奈今夜雨未停 啊今夜风这冷<br>
+咱的情也不愿停 也不愿冷<br>
+分开咱的心情 心痛是一层层<br>
+这段情放置心肝顶<br>
+心爱的（心爱的） 再会啦（再会啦）<br>
+这段情放置心肝顶<br>
+
+------
 告诉我，现在是赚还是亏？接下来是开赚还是关赚？
 
 -------
