--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,10 @@
 
+苏联看破英美阴谋，牺牲30万人首先攻克柏林，避免第三次世界大战<br>
+https://baijiahao.baidu.com/s?id=1736505809098222262&wfr=spider&for=pc
+
+苏军为攻克柏林付出了重大代价。据苏联战后公布，苏军在攻克柏林的过程中共伤亡30万人，其中阵亡10.3万人。还有些历史学家经过统计后认为，柏林战役中苏军实际的伤亡数字是50余万人。
+
+-------
 教授怒斥学生用 AI 写作业，被图灵奖得主反问「为何布置能用 AI 完成的作业」，如何解读这一质疑？ - 胡勃进制空间的回答  <br>
 https://www.zhihu.com/question/1908482208823469211/answer/1909073801028830267
 
