--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -4,6 +4,11 @@ https://baijiahao.baidu.com/s?id=1736505809098222262&wfr=spider&for=pc
 
 苏军为攻克柏林付出了重大代价。据苏联战后公布，苏军在攻克柏林的过程中共伤亡30万人，其中阵亡10.3万人。还有些历史学家经过统计后认为，柏林战役中苏军实际的伤亡数字是50余万人。
 
+天天学习｜习近平特别关注的“TA们”<br>
+https://baijiahao.baidu.com/s?id=1832813891721185094
+
+生物多样性使地球充满生机，也是人类生存和发展的基础。习近平总书记十分重视生态文明建设和生物多样性保护。他说，生物多样性既是可持续发展基础，也是目标和手段。我们要以自然之道，养万物之生，从保护自然中寻找发展机遇，实现生态环境保护和经济高质量发展双赢。
+
 -------
 教授怒斥学生用 AI 写作业，被图灵奖得主反问「为何布置能用 AI 完成的作业」，如何解读这一质疑？ - 胡勃进制空间的回答  <br>
 https://www.zhihu.com/question/1908482208823469211/answer/1909073801028830267
