--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,31 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 5.23：
+最新 5.24：
 
+张北北 - 拥抱你离去
+
+作词：刘涛
+
+拥抱着你的离去<br>
+数着一行行的泪滴<br>
+枕着梦这回忆不忍睡<br>
+寂寞夜只剩我的狼狈<br>
+谎言天花乱坠<br>
+目睹你和他的暧昧<br>
+我的心在慢慢枯萎<br>
+悄悄地碎<br>
+
+如果亲爱的心痛<br>
+不爱的保重<br>
+难爱的却成空<br>
+让我再一次感受你的温柔<br>
+如果他更适合你依偎<br>
+悲伤该如何全身而退<br>
+
+爱情已经已无所谓/<br>
+你的干脆我没防备
+
+-------
 成龙 - 醉拳
 
 作词: 厉曼婷
