--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,6 +4,10 @@
 
 希特勒高估了德国的进攻能力，低估了德国的防守能力。
 
+德国的实力是在进攻中壮大的。
+
+我好想以前看到过毛泽东不知道和谁的谈话，现在想不起来了，说德国进攻莫斯科失败后南下是错的，应该集中兵力从北线进攻。
+
 ------
 袁小迪/龙千玉 - 男人情女人心
 
