--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,35 @@
 
+觉得我会比孔子，老子都要伟大，你觉得可能吗？ - 東皇太一的回答 <br>
+https://www.zhihu.com/question/548004408/answer/1909367277817669123
+
+東皇太一：
+有可能，但是你的想法太糙了。阅读全文​
+
+大学学数学一定要清心寡欲吗？ - 東皇太一的回答 <br>
+https://www.zhihu.com/question/1897091092073129269/answer/1909103123676524658
+
+東皇太一：
+任何时间，任何地点，学习数学，当然要清心寡欲。 校花和她朋友一起约我吃饭，问她有何巴意，小样还企图每天和我在一起，我直接当场拒绝。心想她不懂数学，智商太低，而我不喜欢与智商低的人一起玩。室友搭讪一个美女几个月没搞到，把我搞出来，美女最后加上我了。有一天晚上我正打球，小美女来找我，我脸盲，加上球场的灯光问题，一开始没认出来…阅读全文​
+
+你觉得你聪明吗？为什么？ - 東皇太一的回答 <br>
+https://www.zhihu.com/question/1889385575917810091/answer/1908713795980858355
+
+東皇太一：
+我已逼近目前人类聪明的极限了，在这个并不那么聪明的时代，很多时候不得不被动让自己不那么聪明。 聪明，是一种感知力，比如能听到什么声音，看得见什么光景。你听得见，看得清，就有聪明。所感所量是否真实，是否全面，是否深入，这就取决于聪明的程度。 聪明不意味着一定有大成就，因为要听要看的东西太多，如果不能站在巨人的肩膀上，那么以个…阅读全文​
+
+艺术生转纯数学专业现实吗？ - 東皇太一的回答 <br>
+https://www.zhihu.com/question/1907929532729631576/answer/1908071364017002269
+
+東皇太一：
+我也当过美术生，而且从幼儿园开始就有着常人难以想象的逆天天赋。但是我在美术上装逼装够了，想挑战一下我的软助，我不想一辈子顺风顺水，就凭我这个天赋一路通关，成为一个才艺装逼犯。这和作弊了有什么区别，这是天生的，又不是我自己一步步成长变强，没有体验感，没有价值，一辈子只能走下坡路，自降身份和那些不能真正欣赏艺术，不懂美的人…阅读全文
+
+为啥道家法器，要到佛前开光？ - 東皇太一的回答  <br>
+https://www.zhihu.com/question/1897915180505072487/answer/1908013063799550656
+
+東皇太一：
+虽然但是 他说的这些问题难道不是数学问题吗？ 难道除了数学以外有一个无数学理论能给出最严谨，最有艺术性，最有效，最有影响，最可靠，最有安全感的解决方案吗？ 那他的断言的依据只剩一条:就是现在的数学不足以解决这种问题，没有关系，我们不需要证明我们是对的，只需要证明我们蕴涵了正确答案即可，从而只需要指出他的断言之所以无法成立的一…阅读全文
+
+-------
 苏联看破英美阴谋，牺牲30万人首先攻克柏林，避免第三次世界大战<br>
 https://baijiahao.baidu.com/s?id=1736505809098222262&wfr=spider&for=pc
 
