--- a/text/挑战.md
+++ b/text/挑战.md
@@ -6,7 +6,7 @@
 
 德国的实力是在进攻中壮大的。
 
-我好想以前看到过毛泽东不知道和谁的谈话，现在想不起来了，说德国进攻莫斯科失败后南下是错的，应该集中兵力从北线进攻。
+我好像以前看到过毛泽东不知道和谁的谈话，现在想不起来了，说德国进攻莫斯科失败后南下是错的，应该集中兵力从北线进攻。搜了很久也没找到，但我确信绝对说过。
 
 ------
 袁小迪/龙千玉 - 男人情女人心
