--- a/text/挑战.md
+++ b/text/挑战.md
@@ -14,6 +14,8 @@
 
 我好像以前看到过毛泽东不知道和谁的谈话，现在想不起来了，说德国进攻莫斯科失败后南下是错的，应该集中兵力从北线进攻。搜了很久也没找到，但我确信绝对看到过相关的材料。
 
+有三个人的可能性最大：基辛格、施密特、希思
+
 ------
 袁小迪/龙千玉 - 男人情女人心
 
