--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,7 @@
 
 最新 5.24：
 
-我爷爷生前曾借给别人2万，一直没还，死了后也没要回来，忘了那个借出去的人是不是比我爷爷先死。
+我爷爷生前曾借给别人2万，一直没还，死了后也没要回来，忘了那个借出去的人是不是比我爷爷先死，从逻辑上来说应该是比我爷爷先死了。
 
 ------
 大模型这样囫囵吞枣的吃下几百T的文本数据是没用的，只有像我这样对各种材料做细致的分析才是有用的。
