--- a/text/挑战.md
+++ b/text/挑战.md
@@ -9,6 +9,8 @@
 
 如果微信、支付宝都像知乎这么搞，那么我们的社会会变成什么样？宇宙管理员让你做什么你是不能违抗的，除非有更高级别的管理员。
 
+我说的不是知乎的東皇太一，大家不要误会了。
+
 ------
 我爷爷生前曾借给别人2万，一直没还，死了后也没要回来，忘了那个借出去的人是不是比我爷爷先死，好像是没钱还。
 
