--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,12 @@
 
+1961年，蒙哥马利听毛泽东谈接班人，讲生死观，还相约横渡长江  <br>
+https://www.sohu.com/a/894641197_121165134
+
+蒙哥马利似乎感到这句话有些军人专政的意味，但毛泽东并不这么看，他认为革命的成功离不开战斗，战斗则需要有枪杆子支撑。
+“那么，”蒙哥马利追问，“在和平时期，这句话还有效吗？”
+“当然有效。”毛泽东慢悠悠地说道。
+这两字让蒙哥马利陷入沉思，久久未能释怀。
+
 觉得我会比孔子，老子都要伟大，你觉得可能吗？ - 東皇太一的回答 <br>
 https://www.zhihu.com/question/548004408/answer/1909367277817669123
 
