--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,6 +4,8 @@
 
 找资料的时候突然发现reddit上有一个中文社区，我感觉挺好的，不需要登录，那个X需要登录才能看，我没注册账号。国内的社交平台，无论是知乎还是其他平台，在没有违法的情况下，平台方的人为干预痕迹太重了。
 
+稍微浏览了一下，价值观有问题，感觉像是一个法外之地。就是这些外国平台都有一个问题，没有监管就不会自觉遵守法律了。还有一个问题，就是形成一个多数人的主流意识形态，少数人发声很容易被攻击，不好防御。
+
 -------
 知乎的生态绝不是牢不可破的，就算是腾讯帝国和阿里帝国也总有灭亡的一天，仁义不施而攻守之势异也。
 
