--- a/text/挑战.md
+++ b/text/挑战.md
@@ -12,7 +12,7 @@
 知乎的生态绝不是牢不可破的，就算是腾讯帝国和阿里帝国也总有灭亡的一天，仁义不施而攻守之势异也。
 
 -------
-你们说是我比较无赖，还是知乎管理员（或程序员）更加下三滥，你在热榜或推荐里随你怎么针对我，但是你这么操作是什么意思？我曾想过要不要忍气吞声装不知道，离开知乎，后来又想了一下，这绝不能装不知道，和知乎死磕到底没什么必要，但是在这里发一条想法还是有必要的。李德在自然规则下和蒋介石硬刚那是自寻死路，宇宙管理员又没有介入，他完全可以有其他更合理的操作。但是我现在的情况不一样，是一个中立平台亲自下场破坏规则，我现在的选择只有直接面对，即使是生命受到威胁也不能逃避，这几乎是命令式的，即使有其他更好的选择那我也只能说出来。如果我沉默了，那么就算以后可以正常浏览知乎，那么宇宙管理员也会制裁我的。
+你们说是我比较无赖，还是知乎管理员（或程序员）更加下三滥，你在热榜或推荐里随你怎么针对我，但是你这么操作是什么意思？我曾想过要不要忍气吞声装不知道，离开知乎，后来又想了一下，这绝不能装不知道，和知乎死磕到底没什么必要，但是在这里发一条想法还是有必要的。李德在自然规则下和蒋介石硬刚那是自寻死路，宇宙管理员又没有介入，他完全可以有其他更合理的操作。但是我现在的情况不一样，是一个中立平台亲自下场破坏规则，我现在的选择只有直接面对，在生命没有受到威胁时绝不能逃避，这几乎是命令式的，已经没有更好的选择了我只能说出来。如果我沉默了，就算以后可以正常浏览知乎，那么宇宙管理员也会制裁我的。
 
 如果微信、支付宝都像知乎这么搞，那么我们的社会会变成什么样？宇宙管理员让你做什么你是不能违抗的，除非有更高级别的管理员。就是知乎你收集我的一切隐私信息，我都认了，但是你不能改变我正常操作后得到的观测结果，坍缩后的信息是不能改的，你不能这么搞，你又不是宇宙管理员。我忘记截图了，所以知乎你可以抵赖，但是以后绝对不能再这么做了。
 
@@ -407,6 +407,10 @@ https://www.zhihu.com/question/1905672699918901514/answer/1905824156517377253
 睡醒后打算去路边摊吃烧烤，路上看到一家店起的名字有点怪引起了我的注意，这也太傻了吧。先去蜜雪冰城买了杯原味奶茶，6元，没毛病，路边摊是3元。然后去吃烧烤，点的有点多，问了下多少钱，说还没算，等炸好了之后再算。好了之后告诉我39元，有一个腊肠小串，我问了下是不是比较贵，说是10元一串，里面有10小串，虽然量有点少，但好像这种小串都是卖10块，也没什么问题，然后我也没接着问了。吃的时候没记录，现在回忆一下，剩下的是4素+4荤，年糕+白菜+蘑菇+金针菇，鸡排串+大肠串+2个普通肉串，如果是3×4+4×4好像也没什么问题，如果是1×2+2×2+3×2+4×2=20好像就贵了点。之前我去一家炸串店吃，一次12，一次18含饮料，可能点的没那么多，但我觉得好便宜啊。
 
 总结：这不是钱的问题，而是情绪的问题。去那种烤鱼店吃烧烤可能更贵一点，但这和我没关系，因为我一个人从来不去那里吃，还不如去一家炒菜店吃红烧鱼块盖浇饭，只要16元。总之这一顿45元吃的还不如12元一顿的1荤2素快餐吃的舒服，虽然那家店味道很平淡我基本不去。其实也没什么，如果点贵了问题主要在我自己，只要点的时候先拿个两三串问下多少钱，可能也就不会选择在这家吃了，或者就不会点那么多，还有可能问了后反而变便宜了。
+
+这个闷亏吃了算了，在实力不够的情况下，没必要和他发生直接冲突，而且你是男的，警察又不会理你。我不能害怕死亡，但是我必须要把我有限的生命用在更有价值的地方。有一点我应该做的更好，在他说出39元时，就要立刻把每一串的价格的问清楚，就算贵一点也算了，后来我又去那家炸串店吃过，是5*1+2*3=11。
+
+他的盘子里垫着有个透明袋，把签子去掉刚好可以把吃剩的打包，然后装进那个放奶茶的袋子里。当时走的时候忘拿了，回来拿时那个摊主正好想要收拾，看到桌上有一个打包的袋子又没有拿走似乎有点疑惑。打包后在冰箱里放了一晚，第二天也没有拿出来吃直接扔了。
 
 -------
 “　　他双眉浓而长，充满粗犷的男性魅力，但那双清澈的眼睛，却又是那么秀逸，他鼻子挺直，象征着坚强、决断的铁石心肠，他那薄薄的、嘴角上翘的嘴，看来也有些冷酷，但只要他一笑起来，坚强就变作温柔，冷酷也变作同情，就像是温暖的春风，吹过了大地。<br>
