--- a/text/挑战.md
+++ b/text/挑战.md
@@ -12,7 +12,7 @@
 知乎的生态绝不是牢不可破的，就算是腾讯帝国和阿里帝国也总有灭亡的一天，仁义不施而攻守之势异也。
 
 -------
-你们说是我比较无赖，还是知乎管理员（或程序员）更加下三滥，你在热榜或推荐里随你怎么针对我，但是你这么操作是什么意思？我曾想过要不要忍气吞声装不知道，离开知乎，后来又想了一下，这绝不能装不知道，和知乎死磕到底没什么必要，但是在这里发一条想法还是有必要的。李德在自然规则下和蒋介石硬刚那是自寻死路，宇宙管理员又没有介入，他完全可以有其他更合理的操作。但是我现在的情况不一样，是一个中立平台亲自下场破坏规则，我现在的选择只有直接面对，在生命没有受到威胁时绝不能逃避，这几乎是命令式的，已经没有更好的选择了我只能说出来。如果我沉默了，就算以后可以正常浏览知乎，那么宇宙管理员也会制裁我的。
+你们说是我比较无赖，还是知乎管理员（或程序员）更加下三滥，你在热榜或推荐里随你怎么针对我，但是你这么操作是什么意思？我曾想过要不要忍气吞声装不知道，离开知乎，后来又想了一下，这绝不能装不知道，和知乎死磕到底没什么必要，但是在这里发一条想法还是有必要的。李德在自然规则下和蒋介石硬刚那是自寻死路，宇宙管理员又没有介入，他完全可以有其他更合理的操作。但是我现在的情况不一样，是一个中立平台亲自下场破坏规则，我现在的选择只有直接面对，在生命没有受到威胁时绝不能逃避，这几乎是命令式的，已经没有更好的选择了我只能说出来。如果我沉默了，那么就算以后可以正常浏览知乎，宇宙管理员也会制裁我的。
 
 如果微信、支付宝都像知乎这么搞，那么我们的社会会变成什么样？宇宙管理员让你做什么你是不能违抗的，除非有更高级别的管理员。就是知乎你收集我的一切隐私信息，我都认了，但是你不能改变我正常操作后得到的观测结果，坍缩后的信息是不能改的，你不能这么搞，你又不是宇宙管理员。我忘记截图了，所以知乎你可以抵赖，但是以后绝对不能再这么做了。
 
