--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,58 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 5.24：
+最新 5.25：
 
+杨千嬅 - 小城大事
+
+作词: 林夕
+作曲: 雷颂德
+
+青春仿佛因我爱你开始<br>
+但却令我看破爱这个字<br>
+自你患上失忆<br>
+便是我扭转命数的事<br>
+只因当失忆症发作加深<br>
+没记住我但却另有更新蜜运<br>
+像狐狸精般<br>
+并未允许我步近<br>
+无回忆的余生<br>
+忘掉往日情人<br>
+却又记住移情别爱的命运<br>
+无回忆的男人<br>
+**就当偷厄与瞒骗**<br>
+**抱抱我不过份**<br>
+
+**吻下来 豁出去**<br>
+**这吻别似覆水**<br>
+**再来也许要天上团聚**<br>
+**再回头 你不许**<br>
+**如曾经不登对**<br>
+**你何以双眼好像流泪**<br>
+
+彼此追忆不怕爱要终止<br>
+但我大概上世做过太多坏事<br>
+能从头开始<br>
+跪在教堂说愿意<br>
+娱乐行的人影<br>
+还在继续繁荣<br>
+我在算着甜言蜜语的寿命<br>
+人造的蠢卫星<br>
+没探测出我们已<br>
+已再见不再认<br>
+
+吻下来 豁出去<br>
+这吻别似覆水<br>
+再来也许要天上团聚<br>
+**我下来 你出去**<br>
+**讲再会也心虚**<br>
+**我还记得到天上团聚**<br>
+吻下来 豁出去<br>
+从前多么登对<br>
+你何以双眼好像流泪<br>
+
+每年这天记得再流泪
+
+-------
 张北北 - 拥抱你离去
 
 作词：刘涛
