--- a/text/挑战.md
+++ b/text/挑战.md
@@ -408,7 +408,7 @@ https://www.zhihu.com/question/1905672699918901514/answer/1905824156517377253
 
 总结：这不是钱的问题，而是情绪的问题。去那种烤鱼店吃烧烤可能更贵一点，但这和我没关系，因为我一个人从来不去那里吃，还不如去一家炒菜店吃红烧鱼块盖浇饭，只要16元。总之这一顿45元吃的还不如12元一顿的1荤2素快餐吃的舒服，虽然那家店味道很平淡我基本不去。其实也没什么，如果点贵了问题主要在我自己，只要点的时候先拿个两三串问下多少钱，可能也就不会选择在这家吃了，或者就不会点那么多，还有可能问了后反而变便宜了。
 
-这个闷亏吃了算了，在实力不够的情况下，没必要和他发生直接冲突，而且你是男的，警察又不会理你。我不能害怕死亡，但是我必须要把我有限的生命用在更有价值的地方。有一点我应该做的更好，在他说出39元时，就要立刻把每一串的价格的问清楚，就算贵一点也算了，后来我又去那家炸串店吃过，是5×1+2×3=11。
+这个闷亏吃了算了，在实力不够的情况下，没必要和他发生直接冲突，而且你是男的，警察又不会理你。我不能害怕死亡，但是我必须要把我有限的生命用在更有价值的地方。有一点我应该做的更好，在他说出39元时，就要立刻把每一串的价格都问清楚，就算贵一点也算了，后来我又去那家炸串店吃过，是5×1+2×3=11。
 
 他的盘子里垫着有个透明袋，把签子去掉刚好可以把吃剩的打包，然后装进那个放奶茶的袋子里。当时走的时候忘拿了，回来拿时那个摊主正好想要收拾，看到桌上有一个打包的袋子又没有拿走似乎有点疑惑。打包后在冰箱里放了一晚，第二天也没有拿出来吃直接扔了。
 
