--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,10 @@
 2025年挑战：记录一些想法和分享。
 
-最新 5.24：
+最新 5.25：
 
+难道我真的是底层人民推选出来的天选之人，去反抗那些控制底层人民的程序员？
+
+------
 找资料的时候突然发现reddit上有一个中文社区，我感觉挺好的，不需要登录，那个X需要登录才能看，我没注册账号。国内的社交平台，无论是知乎还是其他平台，在没有违法的情况下，平台方的人为干预痕迹太重了。
 
 稍微浏览了一下，价值观有问题，感觉像是一个法外之地。就是这些外国平台都有一个问题，没有监管就不会自觉遵守法律了。还有一个问题，就是形成一个多数人的主流意识形态后，少数人发声很容易被攻击，不好防御。
