--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,6 +4,8 @@
 
 难道我真的是底层人民推选出来的天选之人，去反抗那些控制底层人民的程序员？
 
+底层程序员又应该去反抗谁？
+
 ------
 找资料的时候突然发现reddit上有一个中文社区，我感觉挺好的，不需要登录，那个X需要登录才能看，我没注册账号。国内的社交平台，无论是知乎还是其他平台，在没有违法的情况下，平台方的人为干预痕迹太重了。
 
