--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -20,6 +20,13 @@ https://studyingfather.com/archives/3636
 怎么写一个令人讨厌的反派？ <br>
 https://www.mobingtu.com/怎么写一个令人讨厌的反派？/
 
+为什么AI大模型容易误认为strawberry里有2个r？ - 感恩戴德真君的回答 <br>
+https://www.zhihu.com/question/11047081559/answer/103876106848
+
+感恩戴德真君：
+从来没有所谓的躺平，大家都在灵活奋斗着！
+使用R1模型深度思考，明明分析出3个了，但AI自己好像始终不愿意相信自己的分析结果，一次又一次重新分析，经过147秒的精神内耗后，最终给了我一个2
+
 ------
 1961年，蒙哥马利听毛泽东谈接班人，讲生死观，还相约横渡长江  <br>
 https://www.sohu.com/a/894641197_121165134
