--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.25：
 
+不要盲目追求人气，只要你发的东西确实是做到了最符合自己内心审美的，会吸引到志同道合的人来看你的。
+
+-------
 友情链接不同于论坛贴吧，是需要用心维护的，虽然人不多，但是会去看你的都是对你感兴趣的，而且只要你没违法就没有管理员。而论坛贴吧把人强制聚在一起，随便发什么垃圾都会污染别人的眼睛，还不好屏蔽，另外在你没有违法的情况下，管理员也可能会经常干预你，让你很难受。
 
 -------
