--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,7 @@
+个人电信宽带申请公网IP地址方法 - 静水流深的文章 <br>
+https://zhuanlan.zhihu.com/p/475398360
+
+R77：我申请的时候客服和宽带师傅都问我公网IP是啥
 
 人的意识究竟是怎么产生的？ - 吃虾要吃带籽虾的回答  <br>
 https://www.zhihu.com/question/619755765/answer/3264715404
