--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,6 +4,8 @@
 
 太想拿菲尔兹奖的话，很可能你就是拿不到。如果你的目标是做agi的话，说不定agi没做出来，反而把菲尔兹奖给拿了。
 
+不是事物总是要走向反面，我们就应该自暴自弃。正因为事物总是要走向反面的，我们更应该努力去实现理想。
+
 -------
 如果是我第一个做出agi的话，大家想要接入需要自备服务器。
 
