--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,26 +2,15 @@
 
 最新 5.25：
 
-天空之城  主题曲（粤语版）
+大学学数学一定要清心寡欲吗？ - 東皇太一的回答 <br>
+https://www.zhihu.com/question/1897091092073129269/answer/1909103123676524658
 
-作词：未知  作曲：久石让
+“原来是他们跪舔不到的女神每天围着我转，又是买礼物又是送早餐，嫉妒使人面目全非，愤怒和仇恨涨红了一双双稚嫩而又饱经沧桑的双眼。”
 
-传说在那天上 在天际的深处<br>
-有座美丽雷泊地 隐隐的飘浮云中央<br>
-仍未揭露它真相 又未找到它方向<br>
-愿能有日 向天空飞去<br>
-找出那探访路向 <br>
-探访天际的家乡<br>
-云层里是我家乡 <br>
-寻觅快乐温馨的爱巢 心中的理想 <br>
-在天空中有座城 有小野花飘香 <br>
-在天空中有座城 鸟声似歌柔扬<br>
-凝视我望向天上 在心里轻轻唱<br>
-朦胧我像听到了<br>
-家乡的鸟儿 在和唱<br>
-谁愿意伴我一路 尽力找到它方向<br>
-愿望能有日向天空飞去<br>
-找到我理想路向
+有曾经错过的人后面再走在一起的么？ - Jerry的回答 <br>
+https://www.zhihu.com/question/630287007/answer/130644818519
+
+“确实颜值跟各方面条件他都优于我特别多 加上喜欢他的人又很多很多，追他的很多，有微信上给他发信息的，还有一个疯狂的追他到他家里去，他父母也认可那个女人”
 
 -------
 太想拿菲尔兹奖的话，很可能你就是拿不到。如果你的目标是做agi的话，说不定agi没做出来，反而把菲尔兹奖给拿了。
