--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,20 @@
+有什么一定要和恋人（未来恋人）完成的人生清单或者梦想吗？ - 范函子Skyline的回答  <br>
+https://www.zhihu.com/question/52984369/answer/134199197
+
+在Firestone Memorial Library和他背对背坐在地上静静地看书，就算世界变成原子也无所谓。
+手牵手走过长长的Washington Road。
+一起学数学，召唤Fine Hall里远去的幽灵。
+在Whitman Theater，等一场精心准备的中文话剧开演。
+
+感情顺利是因为大部分女生能忍还是因为男生真的爱你？ - Jerry的回答 <br>
+https://www.zhihu.com/question/665170898/answer/124548650418
+
+我一度非常伤心，不知道自己做错了什么，总遇到这种男的
+后来他又赶回来找我，我不肯再见他，让他滚，他就缠着我，我骂他祖宗十八代都骂上了，非常难听，又骂又打，他随便我打
+那时候他把那个女的给删了，没有联系方式了
+那以后没看到他跟其他女生牵扯不清了，手机也透明了，随便我看
+
+--------
 个人电信宽带申请公网IP地址方法 - 静水流深的文章 <br>
 https://zhuanlan.zhihu.com/p/475398360
 
