--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,13 @@
 
 最新 5.25：
 
+我很喜欢看学霸和女神的各种故事，你们看我有什么用？我又没什么故事，就算让我回忆起现实中少数认识的几个人，我那么内向，又没和她们说过几句话。
+
+我想起了有一次我约女生吃饭，不是相亲，这期间由于我操作上犯了太多次错误，过程真的很尴尬，但她好像也没怎么介意，最后我也没有表白。
+
+李红袖加小兰已经满足不了我了。
+
+-------
 大学学数学一定要清心寡欲吗？ - 東皇太一的回答 <br>
 https://www.zhihu.com/question/1897091092073129269/answer/1909103123676524658
 
