--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,26 @@
+代数数论推荐教科书类书籍？ - Tsumugi的回答  <br>
+https://www.zhihu.com/question/23000392/answer/1909615471369630724
+
+Tsumugi：
+推荐一本三哥写的书： 讲了Local的部分，非常友好适合入门，不过有些地方比如分歧群没讲（然后今年丘赛就考了这个。。。）可以拿冯克勤之类的书补…阅读全文​
+
+Homology 和 Homotopy 能在多大程度上完全决定一个流形的拓扑？ - 十一月织黑色毛衣的回答 <br>
+https://www.zhihu.com/question/265308226/answer/1909343239011541199
+
+十一月织黑色毛衣：
+几何与拓扑
+同伦、同调函子可以把流形范畴拉到分次群范畴、环范畴里头考虑，但一般的情况下你确实能发现流形的范畴蕴含的信息量会更大，函子打过去以后有“失真”。在一些特殊的情形下我们还是能利用这两种函子做一些“刚性”的事情，先举几个平凡的例子： 2维闭流形的分类我们在上世纪30-40年代已经有大定理，即按照可定向与不可定向以…阅读全文​
+
+如何看待学校的军事化管理？ <br>
+掐死一个稻草人：
+我一直想不明白一个事实，为什么外面抹黑瓷器用各种理由比如棉花，病毒起源论等谣言或者莫须有的性质的信息，这些信息即使存在大多要么本身不值一提，要么和它们对比没那么严重，但是几乎没有现成的，而且程度唯独在瓷器一家独大的衡水模式呢，而我国舆论总能抓住把柄，利用毒品，流浪汉等外国现有且有影响力的弱点来回击阅读全文​
+
+分圆域在一道高中数学竞赛题中的应用(一) - 幽雪忆梦的文章 <br>
+https://zhuanlan.zhihu.com/p/713477711
+
+幽雪忆梦：
+(电脑阅读体验更佳) 首先请出我们的主角: Problem1: 给定奇素数 , 求所有的整数 , 使得存在有理系数多项式 , 使得 虽然乍一看可能觉得"啊, 这简直就是多项式版的Pell方…阅读全文​
+
 有什么一定要和恋人（未来恋人）完成的人生清单或者梦想吗？ - 范函子Skyline的回答  <br>
 https://www.zhihu.com/question/52984369/answer/134199197
 
