--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,6 +2,83 @@
 
 最新 5.25：
 
+邓丽君 - 小城故事
+
+作词: 庄奴
+作曲: 翁清溪/（汤尼）
+
+小城故事多<br>
+充满喜和乐<br>
+若是你到小城来<br>
+收获特别多<br>
+
+看似一幅画<br>
+听像一首歌<br>
+人生境界真善美这里已包括<br>
+
+谈的谈说的说<br>
+小城故事真不错<br>
+请你的朋友一起来<br>
+小城来做客
+
+------
+朴树 - 平凡之路
+
+作词: 朴树/韩寒
+作曲: 朴树
+
+徘徊着的 在路上的<br>
+你要走吗 via via<br>
+易碎的 骄傲着<br>
+那也曾是我的模样<br>
+沸腾着的 不安着的<br>
+你要去哪 via via<br>
+谜一样的 沉默着的<br>
+故事你真的 在听吗
+
+我曾经跨过山和大海<br>
+也穿过人山人海<br>
+我曾经拥有着的一切<br>
+转眼都飘散如烟<br>
+我曾经失落失望<br>
+失掉所有方向<br>
+直到看见平凡<br>
+才是唯一的答案<br>
+当你仍然 还在幻想<br>
+你的明天 via via<br>
+她会好吗 还是更烂<br>
+对我而言 是另一天<br>
+我曾经毁了我的一切<br>
+只想永远地离开<br>
+我曾经堕入无边黑暗<br>
+想挣扎无法自拔<br>
+我曾经像你像他<br>
+像那野草野花<br>
+绝望着 也渴望着<br>
+也哭也笑平凡着
+
+向前走 就这么走<br>
+就算被给过什么<br>
+向前走 就这么走<br>
+就算被夺走什么<br>
+向前走 就这么走<br>
+就算会错过什么<br>
+向前走 就这么走 就算会
+
+我曾经跨过山和大海<br>
+也穿过人山人海<br>
+我曾经问遍整个世界<br>
+从来没得到答案<br>
+我不过像你像他<br>
+像那野草野花<br>
+冥冥中 这是我<br>
+唯一要走的路啊<br>
+时间如烟 如此这般<br>
+明天已在 via via<br>
+风吹过的 路依然远<br>
+你的故事讲到了哪
+
+-------
 杨千嬅 - 小城大事
 
 作词: 林夕
