--- a/text/挑战.md
+++ b/text/挑战.md
@@ -6,7 +6,7 @@
 
 我想起了有一次我约女生吃饭，不是相亲，这期间由于我操作上犯了太多次错误，过程真的很尴尬，但她好像也没怎么介意，最后我也没有表白。
 
-李红袖加小兰已经满足不了我了。
+李红袖加小兰已经满足不了我的幻想了。
 
 -------
 大学学数学一定要清心寡欲吗？ - 東皇太一的回答 <br>
