--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,25 @@
+梁文锋参与发表的 DeepSeek 新论文 NSA 注意力机制，有哪些信息值得关注？会带来哪些影响？ - sonta的回答 <br>
+https://www.zhihu.com/question/12616022631/answer/105896836750
+
+sonta：
+PhD student @ MIT CSAIL
+02/21更新：https://github.com/fla-org/native-sparse-attention @yzhangcs 手速太快了应该写了全网第一个open source的triton kernel版本，欢迎大家试玩！ Codesign真是妙不可言啊 Dynamic sparse attention的主要问题就是如果用flashattention styl…阅读全文​
+
+flash-linear-attention<br>
+https://github.com/fla-org/flash-linear-attention
+
+怎样可以谈到计算机大佬？ <br>
+https://www.zhihu.com/question/3325406118
+
+First order logic prover <br>
+https://github.com/MarisaKirisame/first_order_logic_prover
+
+龙泉寺扫地僧首席浏览器吹牛师<br>
+https://weibo.com/miniblink
+
+过年到现在，终于把mini electron的内核升级到132版本，并且成功跑起vscode。现在的mini election这个精简版electron只有一个exe单文件，50多m左右大小（原版现在230多M了吧？），启动速度和内存占用远小于原版。而api和用法，和原版完全一致，可以无缝兼容原版，用来写小工具很合适[黄鸡大笑]
+
+-------
 代数数论推荐教科书类书籍？ - Tsumugi的回答  <br>
 https://www.zhihu.com/question/23000392/answer/1909615471369630724
 
@@ -23,6 +45,7 @@ https://zhuanlan.zhihu.com/p/713477711
 幽雪忆梦：
 (电脑阅读体验更佳) 首先请出我们的主角: Problem1: 给定奇素数 , 求所有的整数 , 使得存在有理系数多项式 , 使得 虽然乍一看可能觉得"啊, 这简直就是多项式版的Pell方…阅读全文​
 
+--------
 有什么一定要和恋人（未来恋人）完成的人生清单或者梦想吗？ - 范函子Skyline的回答  <br>
 https://www.zhihu.com/question/52984369/answer/134199197
 
