--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,31 @@
 
 最新 5.26：
 
+小沈阳&高进 - 我的好兄弟
+
+作词/作曲：高进
+
+在你辉煌的时刻 <br>
+让我为你唱首歌 <br>
+我的好兄弟 <br>
+心里的有苦你对我说 <br>
+前方大路一起走 <br>
+哪怕是河也一起过 <br>
+苦点累点又能算什么
+在你需要我的时候 <br>
+我来陪你一起度过 <br>
+我的好兄弟答 <br>
+心里有苦你对我说 <br>
+人生难得起起落落 <br>
+还是要坚强的生活 <br>
+哭过笑过至少你还有我答 <br>
+
+**朋友的情谊呀比天还高比地还辽阔** <br>
+**那些岁月我们一定会记得** <br>
+**朋友的情谊呀我们今生最大的难得** <br>
+**像一杯酒 像一首老歌** <br>
+
+-------
 什么不表白是真爱，表白了是钓鱼？我现在感觉就是钓鱼，只不过是钓鱼失败了而已。
 
 --------
