--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,39 @@
+
+神经系统为什么要自指一个“我”出来指导肉体活动？ - 吃虾要吃带籽虾的回答 <br>
+https://www.zhihu.com/question/611053050/answer/3220097284
+
+吃虾要吃带籽虾： “自由能原理”对最小现象自我的解释其实蛮值得一看的。 简单来说，神经系统与环境的交互中，需要这样一个“我”以确保其物理状态构成一个不变的有界集合。这有利于最小化神经系统和外界交互的自由能…阅读全文​
+
+生活中的物理学：基本的物体运动 - 半数o阿白的文章 <br>
+https://zhuanlan.zhihu.com/p/701861421
+
+半数o阿白：我们如何描述这个物体的运动过程呢？或者说，我们想要知道什么呢？ 这就是物理学问题的由来，人们为什么要发展物理学？物理学的目的是什么呢阅读全文​
+
+认知与创造力之间有何关系？ - 最小作用量的回答  <br>
+https://www.zhihu.com/question/655701238/answer/3518262198
+
+最小作用量： 创造力是基于认知能力的。 思维是一种认知过程。在此过程中，大脑运用来自感觉、情绪和记忆的信息去创造并操控诸如概念、图像、图式和脚本等心理表征。 这些心理表征便充当了认知的组成成分，而思维则以有意义的方式将它们组织起来。 最终的结果就是一些更高级的思维过程，我们称之为推理、想象、判断、决策、问题解决、专业知识、创造…阅读全文​
+
+数学的物理化  <br>
+https://www.zhihu.com/pin/1781837335384449024
+
+那么，自然存在这样的数学，他是物理化的，完全是为了拟合自然规律而诞生的，他所关注的问题不是整体性系统性，而是可微调性，微调后与原有规律的相似性。也就是说如何引入新的数学结构提高拟合精度的同时不会严重改变原有的规律。这是相当高超的技巧，
+ 
+黑格尔《小逻辑》读书笔记（2） - 最小作用量的文章  <br>
+https://zhuanlan.zhihu.com/p/702316694
+
+拓扑斯 - 半数o阿白的文章  <br>
+https://zhuanlan.zhihu.com/p/668204360
+
+因为网上基本上找不到相关的信息。 初步的认识是，拓扑斯是一种自函子，G拓扑是一种范畴到滤子层的函子，具有层级阅读全文​
+
+关于毛选的思考和笔记 - 最小作用量的文章  <br>
+https://zhuanlan.zhihu.com/p/679131466
+
+最小作用量：
+一、 中国红色政权发生和存在的原因 总结如下： 1、国内外形势复杂，使得红色政权有机会生存。 2、曾经的农民运动为红色政权的存在提供了土壤。 3、国内外革命形势的发展助长红色政权的发展。 4、红色政权有“枪杆子”，能正面对敌。 5、有党的领导。 二、 毛主席思想精髓 1、实事求是 2、具体问题具体分析，分析清楚并提出解决措施 3、始终能站在全…阅读全文​
+
+-------
 梁文锋参与发表的 DeepSeek 新论文 NSA 注意力机制，有哪些信息值得关注？会带来哪些影响？ - sonta的回答 <br>
 https://www.zhihu.com/question/12616022631/answer/105896836750
 
