--- a/text/挑战.md
+++ b/text/挑战.md
@@ -31,6 +31,8 @@
 
 她这次是钓鱼没错，但你之前已经回避了5次，这5次你随便表白一次，成功的概率都很大。你认为她不够主动是在钓你的鱼，实际上是你看不上她，基本不主动找她聊天，不要污名化人家。
 
+我觉得她身边应该不缺男人，所以就不想主动。
+
 --------
 我很喜欢看学霸和女神的各种故事，你们看我有什么用？我又没什么故事，就算让我回忆起现实中少数认识的几个人，我那么内向，又没和她们说过几句话。
 
