--- a/text/挑战.md
+++ b/text/挑战.md
@@ -15,11 +15,11 @@
 苦点累点又能算什么<br>
 在你需要我的时候 <br>
 我来陪你一起度过 <br>
-我的好兄弟答 <br>
+我的好兄弟 <br>
 心里有苦你对我说 <br>
 人生难得起起落落 <br>
 还是要坚强的生活 <br>
-哭过笑过至少你还有我答 <br>
+哭过笑过至少你还有我 <br>
 
 **朋友的情谊呀比天还高比地还辽阔** <br>
 **那些岁月我们一定会记得** <br>
