--- a/text/挑战.md
+++ b/text/挑战.md
@@ -41,6 +41,8 @@
 
 我觉得她身边应该不缺男人，所以就不想主动。
 
+如果她缺男人你更不会主动吧？你愿意主动的女人应该更不缺男人吧？
+
 --------
 我很喜欢看学霸和女神的各种故事，你们看我有什么用？我又没什么故事，就算让我回忆起现实中少数认识的几个人，我那么内向，又没和她们说过几句话。
 
