--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,11 @@
+FFmpeg命令行之ffmpeg调整音视频播放速度<br>
+https://www.cnblogs.com/zuojie/p/16356827.html
 
+ffmpeg -i test.mp3 -filter:a "atempo=1.1" -vn output.mp3
+
+ffmpeg.exe -i 1.mp3 -filter_complex "[0:a]atempo=1.18[a]" -map "[a]" output.mp3
+
+---------
 神经系统为什么要自指一个“我”出来指导肉体活动？ - 吃虾要吃带籽虾的回答 <br>
 https://www.zhihu.com/question/611053050/answer/3220097284
 
