--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,6 @@
+假小子，男人婆，女汉子这三个词，在大家眼里，有什么区别？ <br>
+https://www.zhihu.com/question/266825535
+
 FFmpeg命令行之ffmpeg调整音视频播放速度<br>
 https://www.cnblogs.com/zuojie/p/16356827.html
 
