--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,7 +2,7 @@
 
 最新 5.26：
 
-不知道你们有没有感觉出来，牛肉汤和李红袖这两个人物是没有什么女汉子和男人婆属性的。用古灵精怪去形容也不是非常贴切，活泼是肯定的，有点坏，很机智，灵动的，调皮捣蛋有一点但只是作为调味剂并不是主食。这两个人和丁灵琳的感觉又不太一样，丁灵琳给人更多的是一种小女生的感觉，牛肉汤要强势一点很坏，李红袖多了几分文艺的气息，还一种一本正经呆的感觉。宋甜儿的性格在现实中应该是比较普遍的。
+不知道你们有没有感觉出来，牛肉汤和李红袖这两个人物是没有什么女汉子和男人婆属性的。用古灵精怪去形容也不是非常贴切，活泼是肯定的，有点坏，很机智，灵动的，调皮捣蛋有一点但只是作为调味剂并不是主食。这两个人和丁灵琳的感觉又不太一样，丁灵琳给人更多的是一种小女生的感觉，牛肉汤要强势一点很坏，还喜欢装冰冷女神，李红袖多了几分文艺的气息，还有一种一本正经呆的感觉。宋甜儿的性格在现实中应该是比较普遍的。
 
 -------
 为什么有回避？因为有人在钓鱼。
