--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,40 @@
 
 最新 5.26：
 
+热门音乐《忘川的河》完整版，原唱：魏佳艺<br>
+https://www.bilibili.com/video/BV1Hv411b7pS/
+
+完整版《忘川的河》演唱：魏佳艺 <br> 
+https://www.bilibili.com/video/BV1cK421x7zZ
+
+魏佳艺 忘川的河
+
+作词：张灵茹 <br>
+作曲：罗智鸿
+
+一次回眸将我的心牵扯<br>
+兜兜转转万里山河踏破<br>
+不料缘起缘灭终究错过<br>
+抱紧累累伤痛谁来渡我<br>
+
+孟婆跟前我想问问孟婆<br>
+奈何桥边叹过声声奈何<br>
+都是命中注定此因此果<br>
+倾尽芳华只能随风飘落<br>
+
+我只身跳进忘川的河<br>
+狠心抛下一生的不舍<br>
+从此爱也婆娑恨也婆娑<br>
+多少前尘往事再无瓜葛
+
+我只身跳进忘川的河<br>
+忍痛断了三生的执着<br>
+但愿千年孤独千年寂寞<br>
+能换一次和你相濡以沫
+
+能换一次和你相濡以沫
+
+-------
 不知道你们有没有感觉出来，牛肉汤和李红袖这两个人物是没有什么女汉子和男人婆属性的。用古灵精怪去形容也不是非常贴切，活泼是肯定的，有点坏，很机智，灵动的，调皮捣蛋有一点但只是作为调味剂并不是主食。这两个人和丁灵琳的感觉又不太一样，丁灵琳给人更多的是一种小女生的感觉，牛肉汤要强势一点很坏，还喜欢装冰冷女神，李红袖多了几分文艺的气息，还有一种一本正经呆的感觉。宋甜儿的性格在现实中应该是比较普遍的。
 
 -------
