--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -8,6 +8,8 @@ ffmpeg -i test.mp3 -filter:a "atempo=1.1" -vn output.mp3
 
 ffmpeg.exe -i 1.mp3 -filter_complex "[0:a]atempo=1.18[a]" -map "[a]" output.mp3
 
+我出现幻觉了，之前下了一首4分42秒的歌，觉得太慢了，想加快一下，有破音效果不是很好，现在再听发现也没感觉特别慢，刚刚好。
+
 ---------
 神经系统为什么要自指一个“我”出来指导肉体活动？ - 吃虾要吃带籽虾的回答 <br>
 https://www.zhihu.com/question/611053050/answer/3220097284
