--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.26：
 
+音乐是主线，其他随便分享点什么都会自动串起来，前提是公开分享，你们也可以试试。一个人私密分享没什么效果，我试过了，或者不公开有人脉的话也可以在项目的Settings里拉10个人进来，然后在知乎上互动，你们体验到的东西和我的个人经历没什么关系。也不需要花时间积累，真的随便分享点什么，效果马上就出来了。作为意识流的体验主体真的很爽，代价就是可能个人隐私会有所泄露，我觉得总体还是赚的。
+
+-------
 好像2000~2010年的流行歌曲我在这里听的很少。
 
 -------
