--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,11 @@
 
+陈景润《初等数论》 第3册 第十一章 平方剩余  p87
+
+为什么用4a乘以(3)式两边等式仍然成立？a=b模m表示a=km+b,显然【？】把a、b、m同时乘以一个数等式不变。假设a=b，为什么ka=kb？
+
+打算花点时间写一篇范例，介绍一下我是怎么看数学书的。
+
+--------
 　　身经百战的胡铁花怎么会变成如此模样？<br>
 　　楚留香骤然觉得他所面对的不是一个人、一柄剑，而是一团混沌的、奇特的、妖异的杀气！<br>
 　　这团杀气是一个奇人和一柄魔剑混合凝结成的，人和剑已凝为一体，几乎已无坚不摧，无懈可击。<br>
