--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,75 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 5.25：
+最新 5.28：
 
+薛家燕 - 皆大欢喜 <br>
+
+作词: 李紫昕
+作曲: 李紫昕
+
+漫步挽手走遍万里千山<br>
+信念编出欢欣世间<br>
+未惧怕山高远路几多弯<br>
+万众齐心 莫怨路难<br>
+唏呀唏呀唏呀唏唏呀唏呀唏呀唏<br>
+一生中 寻寻觅觅多感慨<br>
+是笑是哀 难计得失意外<br>
+
+唏呀唏呀唏呀唏呀唏<br>
+团结一心有新转机<br>
+哪怕是万尺风浪<br>
+都可挽手冲天飞<br>
+唏呀唏呀唏呀唏呀唏<br>
+团聚分享快乐园地<br>
+笑与泪在你我之间<br>
+人生多惊喜<br>
+
+伴着你轻舟悄悄净过千滩<br>
+心里千古我是无限<br>
+淡淡背影深印在我心间<br>
+难过情关万水千山<br>
+唏呀唏呀唏呀唏唏呀唏呀唏呀唏<br>
+一生中离离合合是否应该<br>
+是笑是哀难计得失意外<br>
+
+---------
+周美茵-没有忘掉的面容
+
+作词: 林振强
+作曲: Gibson Deborah Ann
+
+在六七岁 婆婆来港探望 <br>
+在那行李边 跟她初见面 <br>
+婆婆望真我 慈祥呵一呵 <br>
+那面容 至今未忘掉 <br>
+
+在十二三岁 微凉的晚上 <br>
+有巡回戏班 把天空擦亮 <br>
+红蓝绿丑角 齐前来给我望 <br>
+那面容 至今未忘掉 <br>
+
+岁月纵如横飞过的箭 <br>
+却总遗留一些记念 <br>
+朋友你心底可会有 <br>
+记低谁人的亲切面 <br>
+纵不可再 见多一面 <br>
+
+在十七岁 难明了的晚上 <br>
+父母同意分手 天不再亮 <br>
+而妈妈于街里 仍回头把我望 <br>
+那面容 至今未忘掉 <br>
+
+人浮过秋冬与春夏 <br>
+历经许多转变 <br>
+怎麽心里仍是会挂念一些碎片 <br>
+朋友你心底可会有 <br>
+记低谁人的亲切面 <br>
+如祈求重逢前心窝可以暖点 <br>
+
+某面容 至今未忘掉 <br>
+某面容 至今未忘掉 <br>
+
+-------
 邓丽君 - 小城故事
 
 作词: 庄奴
