--- a/text/看书.md
+++ b/text/看书.md
@@ -1,9 +1,16 @@
 
 陈景润《初等数论》 第3册 第十一章 平方剩余  p87
 
-为什么用4a乘以(3)式两边等式仍然成立？a=b模m表示a=km+b,显然【？】把a、b、m同时乘以一个数等式不变。假设a=b，为什么ka=kb？乘法到底是什么？我记得我刚学乘法时是一个数一个数加起来的。
+为什么用4a乘以(3)式两边等式仍然成立？a=b模m表示a=km+b,显然？把a、b、m同时乘以一个数等式不变。假设a=b，为什么ka=kb？乘法到底是什么？我记得我刚学乘法时是一个数一个数加起来的。
 
-打算花点时间写一篇范例，介绍一下我是怎么看数学书的。
+模m的解肯定是模4am的解，反过来也是。举个例子x=1模4
+
+x=1模m的解：   1 5 9 13 17
+4x=4模4m的解:  1 5 9 13 17 
+
+但另一方面 1=5(mod 4)，而1≠5(mod 16)
+
+打算花点时间写一篇范例，介绍一下我是怎么看数学书的，核心原则是破坏大脑的肌肉记忆。
 
 --------
 　　身经百战的胡铁花怎么会变成如此模样？<br>
