--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,7 @@
+[深度] OpenAI o3拒绝关掉自己？！ AI“抗命不遵”意味着什么  <br>
+https://www.bilibili.com/video/BV1fojDzPE7S/
+
+-------
 假小子，男人婆，女汉子这三个词，在大家眼里，有什么区别？ <br>
 https://www.zhihu.com/question/266825535
 
