--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,12 @@
 
 最新 5.28：
 
+姜萍是一个骗子没错，但是这种一眼假的骗局闹得全国人都知道，不正是对她抱有幻想的人太多？
+
+-------
+我感觉我这逻辑有问题，我之前以为
+
+------
 感觉这种音乐意识流不能玩的太过火，适当娱乐一下就可以了，否则可能反噬自身。
 
 ------
