--- a/text/挑战.md
+++ b/text/挑战.md
@@ -10,7 +10,7 @@
 -------
 “我感觉我这逻辑有问题，我之前以为”
 
-怎么会有这句话？第一我没注意到这里多了一句话，第二我不知道这里接下来要说什么。
+怎么会有这句话？第一我没注意到这里多了一句话，第二我不知道这里接下来要说什么。但这句话好像又的确是我写的。
 
 ------
 感觉这种音乐意识流不能玩的太过火，适当娱乐一下就可以了，否则可能反噬自身。
