--- a/text/挑战.md
+++ b/text/挑战.md
@@ -8,9 +8,7 @@
 姜萍是一个骗子没错，但是这种一眼假的骗局闹得全国人都知道，不正是对她抱有幻想的人太多？
 
 -------
-“我感觉我这逻辑有问题，我之前以为”
-
-怎么会有这句话？第一我没注意到这里多了一句话，第二我不知道这里接下来要说什么。但这句话好像又的确是我写的。
+我感觉我这逻辑有问题，我之前以为如果我出名了，我应该就能做出agi了吧，出名就出名吧。正确的逻辑应该是做出agi是没有可能的，但是我出名却是有可能的。
 
 ------
 感觉这种音乐意识流不能玩的太过火，适当娱乐一下就可以了，否则可能反噬自身。
