--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,11 @@
+柯洁复出后围甲首战对阵李轩豪告负，如何评价本场比赛柯洁的表现？ - 唐崇哲的回答 <br>
+https://www.zhihu.com/question/1910711996216776557/answer/1910714403592078739
+
+唐崇哲：
+第十八届韩国国务总理杯世界业余围棋锦标赛冠军
+泻药 本来还是很期待柯洁复出之后能够恢复巅峰状态的。 但看完布局……有点难绷，63企图先手便宜调整心情，被白的64一跑亏大半手棋，瞬间要没了 顶尖高手之间的对决，上来就在常见棋型中被打崩太少见了。 下面简单解说一下局部变化 如果黑棋不想给目数上的便宜 黑1接上，白棋再补回来，黑3这边还欠一手棋，黑大亏 实战黑棋吃掉两子 白棋从二路打过…阅读全文​
+
+------
 [深度] OpenAI o3拒绝关掉自己？！ AI“抗命不遵”意味着什么  <br>
 https://www.bilibili.com/video/BV1fojDzPE7S/
 
