--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,12 @@
 2025年挑战：记录一些想法和分享。
 
-最新 5.28：
+最新 5.29：
 
+今天中午去吃炒年糕，加个荷包蛋。回来路上想着要不要买雪糕，好像我现在也不太想吃，又一想我下午可能会想吃出来太麻烦了，所以还是买吧。买了巧克力红枣牛奶雪糕、一串葡萄雪泥、御冰坊老冰棍、小奶糕这4样总共11元。回去的路比较远，再加上太阳很晒，怕拿回去都融化了，我竟然还穿着一件外套，不如脱下来把雪糕包起来，这样就可以防止融化了。但现在想了一下，那件外套是黑色的，黑色是吸热的，会不会还是不包更好？拿回来后有3之是硬的，还有一支软了，放冰箱里应该会硬回来吧？
+
+我已不再隐形，不过不用担心，知乎上必定至少还有100个隐形人，即使在我最擅长的幻想和深度分析领域，他们的天赋都不比我差。
+
+-------
 音乐意识流的精神体验已经逼近人类正常幻想的极限。
 
 -------
