--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,13 @@
+
+计算机学科用到的数学是否十分浅显，不涉及到高深的数学理论，比如抽象代数，代数拓扑，代数几何等? - MoonCancer的回答 <br>
+https://www.zhihu.com/question/1908197752606814498/answer/1911052580001392568
+
+ai工程师：深度学习是上帝
+
+数学工作者：菲尔兹是上帝
+
+毛泽东：马克思是上帝
+
 柯洁复出后围甲首战对阵李轩豪告负，如何评价本场比赛柯洁的表现？ - 唐崇哲的回答 <br>
 https://www.zhihu.com/question/1910711996216776557/answer/1910714403592078739
 
