--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,6 +1,6 @@
 
-计算机学科用到的数学是否十分浅显，不涉及到高深的数学理论，比如抽象代数，代数拓扑，代数几何等? - MoonCancer的回答 <br>
-https://www.zhihu.com/question/1908197752606814498/answer/1911052580001392568
+机器学习的理论方向 PhD 是否真的会接触那么多现代数学（黎曼几何、代数拓扑之类）？ - Ningfh的回答 - 知乎
+https://www.zhihu.com/question/310473923/answer/3490434210
 
 ai工程师：深度学习是上帝
 
