--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,12 +1,14 @@
+毛泽东笑谈生死<br>
+https://paper.people.com.cn/jhzk/html/2011-06/18/content_959415.htm?div=-1
 
-机器学习的理论方向 PhD 是否真的会接触那么多现代数学（黎曼几何、代数拓扑之类）？ - Ningfh的回答 - 知乎
+“不，我要去见我的上帝，我的上帝是马克思，我有许多事情要急于同他讨论。”毛泽东认真地说。
+
+机器学习的理论方向 PhD 是否真的会接触那么多现代数学（黎曼几何、代数拓扑之类）？ - Ningfh的回答 <br>
 https://www.zhihu.com/question/310473923/answer/3490434210
 
 ai工程师：深度学习是上帝
 
-数学工作者：菲尔兹是上帝
-
-毛泽东：马克思是上帝
+数学工作者：菲尔兹奖是上帝
 
 柯洁复出后围甲首战对阵李轩豪告负，如何评价本场比赛柯洁的表现？ - 唐崇哲的回答 <br>
 https://www.zhihu.com/question/1910711996216776557/answer/1910714403592078739
