--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.29：
 
+机器学习、深度学习、强化学习、人工神经网络你们喜欢说哪个？我一般更偏向于说深度学习。
+
+-------
 每个人都是有软肋的，即使是毛泽东也有，虽然他晚年有人服侍，死的也不是很悲惨，但是他的文化大革命在他死后彻底破产了。不过也没关系，在后来又出现了影视音乐文化的大繁荣。
 
 -------
