--- a/text/挑战.md
+++ b/text/挑战.md
@@ -4,6 +4,8 @@
 
 机器学习、深度学习、强化学习、人工神经网络你们喜欢说哪个？我一般更偏向于说深度学习。
 
+其实我的研究也可以说是深度学习，只是这个词被占用了，所以为了避免歧义，我一般会说深度思考、深度分析。
+
 -------
 每个人都是有软肋的，即使是毛泽东也有，虽然他晚年有人服侍，死的也不是很悲惨，但是他的文化大革命在他死后彻底破产了。不过也没关系，在后来又出现了影视音乐文化的大繁荣。
 
