--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.29：
 
+很久以前知乎上看到一篇关于瓦特的文章，现在找不到了，有几个关键点网上的文章都没提到。在1776年前几年瓦特由于什么原因搬家了，文章作者说瓦特做了十几年的研究一直没有成功，可能是搬家让他转运了。5年前他曾在日记上写到他快成功了，蒸汽机发明后第一次开店，就有人把他的蒸汽机砸了。
+
+-------
 机器学习、深度学习、强化学习、人工神经网络你们喜欢说哪个？我一般更偏向于说深度学习。
 
 其实我的研究也可以说是深度学习，只是这个词被占用了，所以为了避免歧义，我一般会说深度思考、深度分析。
