--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,9 @@
+
+詹姆斯·瓦特：传记，发明和贡献<br>
+https://cn.sperohope.com/james-watt-biograf
+
+蒸汽机的改进使詹姆斯·瓦特（James Watt）成为了一个有钱人：他能够在1800年退休，在苏格兰购买了乡间别墅，与妻子一起前往法国和德国旅行，并参加了致力于科学和艺术的社团。
+
 毛泽东笑谈生死<br>
 https://paper.people.com.cn/jhzk/html/2011-06/18/content_959415.htm?div=-1
 
