--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.29：
 
+不要试图去弥补过去的错误，因为时机已经过去了，强行弥补反而会使现状更糟糕，我们应该做的是利用过去的错误让未来能做出更正确的抉择。
+
+-------
 很久以前知乎上看到一篇关于瓦特的文章，现在找不到了，有几个关键点网上的文章都没提到。在1776年前几年瓦特由于什么原因搬家了，文章作者说瓦特做了十几年的研究一直没有成功，可能是搬家让他转运了。5年前他曾在日记上写到他快成功了，蒸汽机发明后第一次开店，就有人把他的蒸汽机砸了。
 
 -------
@@ -11,6 +14,8 @@
 
 -------
 每个人都是有软肋的，即使是毛泽东也有，虽然他晚年有人服侍，死的也不是很悲惨，但是他的文化大革命在他死后彻底破产了。不过也没关系，在后来又出现了影视音乐文化的大繁荣。
+
+大跃进的目的是粮食大丰收，结果搞到最后人民连饭都吃不饱饿死一大堆。反正都要饿死人，干脆就别管人民吃饭了，去发展高科技好了。
 
 -------
 今天中午去吃炒年糕，加个荷包蛋。回来路上想着要不要买雪糕，好像我现在也不太想吃，又一想我下午可能会想吃出来太麻烦了，所以还是买吧。买了巧克力红枣牛奶雪糕、一串葡萄雪泥、御冰坊老冰棍、小奶糕这4样总共11元。回去的路比较远，再加上太阳很晒，怕拿回去都融化了，我竟然还穿着一件外套，不如脱下来把雪糕包起来，这样就可以防止融化了。但现在想了一下，那件外套是黑色的，黑色是吸热的，会不会还是不包更好？拿回来后有3支是硬的，还有一支软了，放冰箱里应该会硬回来吧？
