--- a/text/挑战.md
+++ b/text/挑战.md
@@ -17,6 +17,10 @@
 
 大跃进的目的是粮食大丰收，结果搞到最后人民连饭都吃不饱饿死一大堆。反正都要饿死人，干脆就别管粮食的生产指标了，去发展高科技好了。
 
+无论是粮食的生产指标还是高科技都无法代替人民有没有饿肚子的感受。
+
+狭隘的为了吃饱而一直做低端生产将无法使社会进步。
+
 -------
 今天中午去吃炒年糕，加个荷包蛋。回来路上想着要不要买雪糕，好像我现在也不太想吃，又一想我下午可能会想吃出来太麻烦了，所以还是买吧。买了巧克力红枣牛奶雪糕、一串葡萄雪泥、御冰坊老冰棍、小奶糕这4样总共11元。回去的路比较远，再加上太阳很晒，怕拿回去都融化了，我竟然还穿着一件外套，不如脱下来把雪糕包起来，这样就可以防止融化了。但现在想了一下，那件外套是黑色的，黑色是吸热的，会不会还是不包更好？拿回来后有3支是硬的，还有一支软了，放冰箱里应该会硬回来吧？
 
