--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,89 @@
 2025年挑战：记录一些想法和分享。
 
-最新 5.29：
+最新 5.30：
 
+S.H.E - 中国话
+
+作词:郑楠/施人诚
+作曲:郑楠
+
+扁担宽 板凳长<br>
+扁担想绑在板凳上<br>
+扁担宽 板凳长<br>
+扁担想绑在板凳上<br>
+伦敦玛莉莲<br>
+买了件旗袍送妈妈<br>
+莫斯科的夫司基<br>
+爱上牛肉面疙瘩<br>
+
+各种颜色的皮肤<br>
+各种颜色的头发<br>
+嘴里念的说的<br>
+开始流行中国话<br>
+多少年我们苦练<br>
+英文发音和文法<br>
+这几年换他们卷着舌头学<br>
+平上去入的变化<br>
+平平仄仄平平仄<br>
+好聪明的中国人<br>
+好优美的中国话<br>
+
+扁担宽 板凳长<br>
+扁担想绑在板凳上<br>
+板凳不让扁担绑在板凳上<br>
+扁担偏要绑在板凳上<br>
+板凳偏偏不让扁担绑在板凳上<br>
+到底扁担宽还是板凳长<br>
+哥哥弟弟坡前坐<br>
+坡上卧着一只鹅<br>
+坡下流着一条河<br>
+哥哥说宽宽的河<br>
+弟弟说白白的鹅<br>
+鹅要过河 河要渡鹅<br>
+不知是那鹅过河 还是河渡鹅<br>
+
+全世界都在学中国话<br>
+孔夫子的话<br>
+越来越国际化<br>
+全世界都在讲中国话<br>
+我们说的话<br>
+让世界都认真听话<br>
+
+纽约苏珊娜<br>
+开了间禅风 Lounge Bar<br>
+柏林来的沃夫冈<br>
+拿胡琴配着电吉他<br>
+
+各种颜色的皮肤<br>
+各种颜色的头发<br>
+嘴里念的说的<br>
+开始流行中国话<br>
+多少年我们苦练<br>
+英文发音和文法<br>
+这几年换他们卷着舌头学<br>
+平上去入的变化<br>
+仄仄平平仄仄平<br>
+好聪明的中国人<br>
+好优美的中国话<br>
+
+有个小孩叫小杜<br>
+上街打醋又买布<br>
+买了布 打了醋<br>
+回头看见鹰抓兔<br>
+放下布 搁下醋<br>
+上前去追鹰和兔<br>
+飞了鹰 跑了兔<br>
+洒了醋 湿了布<br>
+嘴说腿 腿说嘴<br>
+嘴说腿 爱跑腿<br>
+腿说嘴 爱卖嘴<br>
+光动嘴 不动腿<br>
+光动腿 不动嘴<br>
+不如不长腿和嘴<br>
+到底是那嘴说腿 还是腿说嘴<br>
+
+
+-------
 不要试图去弥补过去的错误，因为时机已经过去了，强行弥补反而会使现状更糟糕，我们应该做的是利用过去的错误让未来能做出更正确的抉择。
 
 -------
