--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,50 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 5.28：
+最新 5.30：
 
+孙耀威 - 爱的故事上集
+
+作词: 潘伟源
+作曲: George Takahash
+
+星的光点点洒于午夜<br>
+人人开开心心说说故事<br>
+偏偏今宵所想讲不太易<br>
+迟疑地望你想说又复迟疑<br>
+秋风将涌起的某夜<br>
+遗留她的窗边有个故事<br>
+孤单单的小伙子不顾寂寞<br>
+徘徊树下直至天际露月儿<br>
+
+冬风吹走几多个月夜<br>
+为何窗边的她欠缺注视<br>
+刻于窗扉小子写的爱慕字<br>
+完全没用像个飘散梦儿<br>
+今宵的小伙子倾吐憾事<br>
+谁人痴痴的要再听故事<br>
+偏偏痴心小子只知道上集<br>
+祈求下集是个可爱梦儿<br>
+
+知不知对你牵上万缕爱意<br>
+每晚也痛心空费尽心思<br>
+这小子欲断难断这故事<br>
+全为我爱上你偏偏你不知<br>
+
+春风轻吹点点火花衬月夜<br>
+人人开开心心说说故事<br>
+终于倾出这小子的往事<br>
+长年累月为你怎再自持<br>
+今宵知否对你的暗示<br>
+为何真的将它当故事<br>
+偏偏痴心小子只知道上集<br>
+祈求下集是个可爱梦儿<br>
+
+知不知每晚想你十次百次<br>
+每晚也去等 因我极心痴<br>
+可不可合力延续这故事<br>
+延续这片爱意一生俩相依<br>
+
+-------
 薛家燕 - 皆大欢喜 <br>
 
 作词: 李紫昕
