--- a/text/看书.md
+++ b/text/看书.md
@@ -10,6 +10,8 @@ x=1模m的解：   1 5 9 13 17
 
 但另一方面 1=5(mod 4)，而1≠5(mod 16)
 
+这里之所以要乘以4a是为了变形为y^2=D的形式，那为什么乘以a不行呢？乘以4a后可以把分母里的4约掉。
+
 打算花点时间写一篇范例，介绍一下我是怎么看数学书的，核心原则是破坏大脑的肌肉记忆。
 
 --------
