--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,11 @@
 
+留一句话给三年后的你，你会说什么呢? - 米谢尔的回答 <br>
+https://www.zhihu.com/question/629646332/answer/3283916180
+
+米谢尔：
+“我对你透露一个大秘密，这是人类最古老的玩笑。往哪走，都是往前走。”…阅读全文​
+
+------
 詹姆斯·瓦特：传记，发明和贡献<br>
 https://cn.sperohope.com/james-watt-biograf
 
