--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.30：
 
+懊悔应该是自己力所能及的事情没用做好，而不是去后悔控制之外的事情没完成。
+
+------
 之前在知乎上收藏的一篇写刘邦的文章找不到了，有一条评论大概说的是在汉文帝还是汉景帝时期，有人想要造反，结果手下的人劝他最好不要造反，说昔日刘邦打章邯，经过事后推演，不是刘邦明修栈道暗渡陈仓路线选的好，而是无论刘邦怎么选，章邯都是防不住的。
 
 -------
