--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,14 @@
 
+在人际交往中你悟出过什么道理？ - 马丁.Success的回答 <br>
+https://www.zhihu.com/question/35471739/answer/1911875749570381482
+
+马丁.Success：
+如坐针毡，如芒刺背，如鲠在喉
+当放过你的失误不利于彰显自己的高明，接纳你的缺点无助于佐证自己的长处，那就无人会对你高抬贵手。
+一个人想要保护自己，就永远不要让别人面临两难的抉择。
+但凡两难，人一定是默认让别人更难。
+
+-------
 留一句话给三年后的你，你会说什么呢? - 米谢尔的回答 <br>
 https://www.zhihu.com/question/629646332/answer/3283916180
 
