--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,7 @@
+进击的巨人：马莱四人组被抛弃了？马莱的飞艇本可以送他们一程 <br>
+https://www.sohu.com/a/661457007_120604446
 
+--------
 在人际交往中你悟出过什么道理？ - 马丁.Success的回答 <br>
 https://www.zhihu.com/question/35471739/answer/1911875749570381482
 
