--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,13 @@
+试析中国封建制解体的原因 <br>
+https://wenku.baidu.com/view/562cd49c5cbfc77da26925c52cc58bd63086934c.html
+
+现在网上把清朝说得一无是处，但是为什么能统治268年？ - o0茶海0o的回答 <br>
+https://www.zhihu.com/question/456152777/answer/1911707839786911252
+
+o0茶海0o：
+郑州大成称重设备有限公司 网络部经理
+最近我非常喜欢看B站博主小约翰可汗的视频，就是创造了通辽宇宙的那个小约翰可汗。（因为不知道他知乎上的账号，所以就不@ 他了，下面部分内容是小约翰可汗原创，本人选取了一部分内容。)
+
 进击的巨人：马莱四人组被抛弃了？马莱的飞艇本可以送他们一程 <br>
 https://www.sohu.com/a/661457007_120604446
 
