--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,12 @@
 2025年挑战：记录一些想法和分享。
 
-最新 5.30：
+最新 6.1：
 
+没有饿肚子的生活肯定比饿肚子的生活要好，有电视的日子肯定比没电视的日子要好，有互联网的生活肯定比没互联网的生活要好。都有了后怎么判定社会是进步的？奴隶制相对原始社会是进步的，因为开始有人不用从事体力劳动而有更多的时间开始脑力劳动。随着人类社会生产力的逐渐提高，奴隶的生产效率远低于**掌握生产技术的自由劳动者**，导致奴隶制的经济基础受到削弱而逐渐瓦解，从而被封建制度取代。资本主义的产生，是封建制度瓦解的根本原因。以个体生产和手工工具为基础的封建制生产方式，是与技术水平低下的农业、手工业生产和不发达的商品经济相适应的。当生产力进一步发展，商品生产、商品流通不断增长，国内外市场迅速扩张，就为封建制生产方式的瓦解创造了条件。
+
+资本主义的瓦解才刚刚开始？
+
+------
 懊悔应该是自己力所能及的事情没有做好，而不是去后悔控制之外的事情没完成。
 
 ------
