--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,57 @@
 
 最新 6.1：
 
+海岛甜心 - 海岛甜心
+
+作词: 天天
+作曲: 包小柏
+
+Cry 灰姑娘的眼泪<br>
+就像流星坠落海底 痛到心里<br>
+
+Try 一次次一次次 伤过的心<br>
+童话世界 不再美丽<br>
+我在梦里期待<br>
+相信自己存在<br>
+现实中的无奈<br>
+最后终于醒来<br>
+眼泪留下 一瞬间明白
+
+十二点 哭和笑的界线<br>
+你的吻从此不再出现<br>
+Love is over
+
+Dreams never come ture
+
+他的出现 你的转变<br>
+我的爱情断了线<br>
+看着照片 变成昨天<br>
+幸福离我好遥远
+
+爱情的玻璃鞋在哪呢<br>
+我的泪透着光期待着<br>
+Love is over
+
+Dreams never come ture
+
+你的离开 让我觉得<br>
+命运就像灰姑娘<br>
+心都碎了 那天晚上<br>
+独自发呆到天亮<br>
+我的爱在梦和幻灭中旋转
+
+相信会有真爱 感觉得好累<br>
+过程有苦有甜 结局不完美<br>
+黑夜总会过去 爱全被撕碎
+
+灰姑娘的眼泪<br>
+
+I say cry<br>
+灰姑娘的眼泪<br>
+就像流星坠落海底<br>
+痛到心里
+
+-------
 没有饿肚子的生活肯定比饿肚子的生活要好，有电视的日子肯定比没电视的日子要好，有互联网的生活肯定比没互联网的生活要好。都有了后怎么判定社会是进步的？奴隶制相对原始社会是进步的，因为开始有人不用从事体力劳动而有更多的时间开始脑力劳动。随着人类社会生产力的逐渐提高，奴隶的生产效率远低于**掌握生产技术的自由劳动者**，导致奴隶制的经济基础受到削弱而逐渐瓦解，从而被封建制度取代。资本主义的产生，是封建制度瓦解的根本原因。以个体生产和手工工具为基础的封建制生产方式，是与技术水平低下的农业、手工业生产和不发达的商品经济相适应的。当生产力进一步发展，商品生产、商品流通不断增长，国内外市场迅速扩张，就为封建制生产方式的瓦解创造了条件。
 
 资本主义的瓦解才刚刚开始？人工智能有自我意识还不会这么快的到来，但是人工智能带来的生产力大爆炸很可能快要来了。
